--- a/面试/算法/数组/简单/数组-简单(41-60).md
+++ b/面试/算法/数组/简单/数组-简单(41-60).md
@@ -8,7 +8,550 @@
 
 # 数组-简单(41-60)
 
-## 41.[[989. 数组形式的整数加法](https://leetcode-cn.com/problems/add-to-array-form-of-integer/)]
+## 41.[[888. 公平的糖果交换](https://leetcode-cn.com/problems/fair-candy-swap/)]
+
+**描述**
+
+爱丽丝和鲍勃有不同大小的糖果棒：A[i] 是爱丽丝拥有的第 i 块糖的大小，B[j] 是鲍勃拥有的第 j 块糖的大小。
+
+因为他们是朋友，所以他们想交换一个糖果棒，这样交换后，他们都有相同的糖果总量。（一个人拥有的糖果总量是他们拥有的糖果棒大小的总和。）
+
+返回一个整数数组 ans，其中 ans[0] 是爱丽丝必须交换的糖果棒的大小，ans[1] 是 Bob 必须交换的糖果棒的大小。
+
+如果有多个答案，你可以返回其中任何一个。保证答案存在。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：A = [1,1], B = [2,2]
+输出：[1,2]
+```
+
+**示例 2：**
+
+```
+输入：A = [1,2], B = [2,3]
+输出：[1,2]
+```
+
+**示例 3：**
+
+```
+输入：A = [2], B = [1,3]
+输出：[2,3]
+```
+
+**示例 4：**
+
+```
+输入：A = [1,2,5], B = [2,4]
+输出：[5,4]
+```
+
+**提示：**
+
+- 1 <= A.length <= 10000
+- 1 <= B.length <= 10000
+- 1 <= A[i] <= 100000
+- 1 <= B[i] <= 100000
+- 保证爱丽丝与鲍勃的糖果总量不同。
+- 答案肯定存在。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] fairCandySwap(int[] A, int[] B) {
+        int[] res = new int[2];
+        Set<Integer> set = new HashSet<>();
+        // 先计算出两个两个人拥有的糖果数量
+        // 并将其中一个人的糖果, 存放到set中, 用于后面计算
+        int sumA = 0;
+        for(int a : A){
+            sumA += a;
+            set.add(a);
+        }
+        int sumB = 0;
+        for(int b : B){
+            sumB += b;
+        }
+        // 计算出差值 A交出的数 - B交出的数 = (sumA - sumB) / 2
+        int difference = (sumA - sumB) / 2;
+        for(int b : B){
+            if(set.contains(b+difference)){
+                res[0] = b+difference;
+                res[1] = b;
+            }
+        }
+        return res;
+    }
+}
+```
+
+## 42.[[896. 单调数列](https://leetcode-cn.com/problems/monotonic-array/)]
+
+**描述**
+
+如果数组是单调递增或单调递减的，那么它是单调的。
+
+如果对于所有 i <= j，A[i] <= A[j]，那么数组 A 是单调递增的。 如果对于所有 i <= j，A[i]> = A[j]，那么数组 A 是单调递减的。
+
+当给定的数组 A 是单调数组时返回 true，否则返回 false。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：[1,2,2,3]
+输出：true
+```
+
+**示例 2：**
+
+```
+输入：[6,5,4,4]
+输出：true
+```
+
+**示例 3：**
+
+```
+输入：[1,3,2]
+输出：false
+```
+
+**示例 4：**
+
+```
+输入：[1,2,4,5]
+输出：true
+```
+
+**示例 4：**
+
+```
+输入：[1,1,1]
+输出：true
+```
+
+**提示：**
+
+- 1 <= A.length <= 10000
+- 1 <= B.length <= 10000
+- 1 <= A[i] <= 100000
+- 1 <= B[i] <= 100000
+- 保证爱丽丝与鲍勃的糖果总量不同。
+- 答案肯定存在。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] fairCandySwap(int[] A, int[] B) {
+        int[] res = new int[2];
+        Set<Integer> set = new HashSet<>();
+        // 先计算出两个两个人拥有的糖果数量
+        // 并将其中一个人的糖果, 存放到set中, 用于后面计算
+        int sumA = 0;
+        for(int a : A){
+            sumA += a;
+            set.add(a);
+        }
+        int sumB = 0;
+        for(int b : B){
+            sumB += b;
+        }
+        // 计算出差值 A交出的数 - B交出的数 = (sumA - sumB) / 2
+        int difference = (sumA - sumB) / 2;
+        for(int b : B){
+            if(set.contains(b+difference)){
+                res[0] = b+difference;
+                res[1] = b;
+            }
+        }
+        return res;
+    }
+}
+```
+
+## 43.[[905. 按奇偶排序数组](https://leetcode-cn.com/problems/sort-array-by-parity/)]
+
+**描述**
+
+给定一个非负整数数组 `A`，返回一个数组，在该数组中， `A` 的所有偶数元素之后跟着所有奇数元素。
+
+你可以返回满足此条件的任何数组作为答案。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：[3,1,2,4]
+输出：[2,4,3,1]
+输出 [4,2,3,1]，[2,4,1,3] 和 [4,2,1,3] 也会被接受。
+```
+
+**提示：**
+
+- `1 <= A.length <= 5000`
+- `0 <= A[i] <= 5000`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] sortArrayByParity(int[] A) {
+        int[] res = new int[A.length];
+        int left = 0;
+        int right = A.length - 1;
+        for(int i : A){
+            if(i % 2 == 0){
+                res[left] = i;
+                left++;
+            }else{
+                res[right] = i;
+                right--;
+            }
+        }
+        return res;
+    }
+}
+```
+
+## 44.[[914. 卡牌分组](https://leetcode-cn.com/problems/x-of-a-kind-in-a-deck-of-cards/)] !*
+
+**描述**
+
+给定一副牌，每张牌上都写着一个整数。
+
+此时，你需要选定一个数字 X，使我们可以将整副牌按下述规则分成 1 组或更多组：
+
+- 每组都有 X 张牌。
+- 组内所有的牌上都写着相同的整数。
+
+仅当你可选的 X >= 2 时返回 true。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：[1,2,3,4,4,3,2,1]
+输出：true
+解释：可行的分组是 [1,1]，[2,2]，[3,3]，[4,4]
+```
+
+**示例 2：**
+
+```
+输入：[1,1,1,2,2,2,3,3]
+输出：false
+解释：没有满足要求的分组。
+```
+
+**示例 3：**
+
+```
+输入：[1]
+输出：false
+解释：没有满足要求的分组。
+```
+
+**提示：**
+
+- `1 <= deck.length <= 10000`
+- `0 <= deck[i] < 10000`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean hasGroupsSizeX(int[] deck) {
+        int[] count = new int[10000];
+        for (int c: deck) {
+            count[c]++;
+        }
+
+        int g = -1;
+        for (int i = 0; i < 10000; ++i) {
+            if (count[i] > 0) {
+                if (g == -1) {
+                    g = count[i];
+                } else {
+                    g = gcd(g, count[i]);
+                }
+            }
+        }
+        return g >= 2;
+    }
+
+    public int gcd(int x, int y) {
+        return x == 0 ? y : gcd(y % x, x);
+    }
+}
+```
+
+## 45.[[922. 按奇偶排序数组 II](https://leetcode-cn.com/problems/sort-array-by-parity-ii/)] 
+
+**描述**
+
+给定一个非负整数数组 A， A 中一半整数是奇数，一半整数是偶数。
+
+对数组进行排序，以便当 A[i] 为奇数时，i 也是奇数；当 A[i] 为偶数时， i 也是偶数。
+
+你可以返回任何满足上述条件的数组作为答案。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：[4,2,5,7]
+输出：[4,5,2,7]
+解释：[4,7,2,5]，[2,5,4,7]，[2,7,4,5] 也会被接受。
+```
+
+**提示：**
+
+- `2 <= A.length <= 20000`
+- `A.length % 2 == 0`
+- `0 <= A[i] <= 1000`
+
+**Java**
+
+```java
+class Solution {
+    public int[] sortArrayByParityII(int[] A) {
+        int[] res = new int[A.length];
+        int[] even = new int[A.length / 2];
+        int[] odd = new int[A.length / 2];
+        int evenIndex = 0, oddIndex = 0; 
+        for(int i: A){
+            if(i % 2 == 0){
+                odd[oddIndex] = i;
+                oddIndex++;
+            }else{
+                even[evenIndex] = i;
+                evenIndex++;
+            }
+        }
+        int index = 0;
+        for(int i=0; i<A.length; i+=2){
+            res[i] = odd[index];
+            res[i+1] = even[index];
+            index++; 
+        }
+        return res;
+    }
+}
+```
+
+## 46.[[941. 有效的山脉数组](https://leetcode-cn.com/problems/valid-mountain-array/)]
+
+**描述**
+
+给定一个整数数组 A，如果它是有效的山脉数组就返回 true，否则返回 false。
+
+让我们回顾一下，如果 A 满足下述条件，那么它是一个山脉数组：
+
+- A.length >= 3
+- 在 0 < i < A.length - 1 条件下，存在 i 使得：
+  - A[0] < A[1] < ... A[i-1] < A[i]
+  - A[i] > A[i+1] > ... > A[A.length - 1]
+
+**示例**
+
+**示例 1：**
+
+```
+输入：[2,1]
+输出：false
+```
+
+**示例 2：**
+
+```
+输入：[3,5,5]
+输出：false
+```
+
+**示例 2：**
+
+```
+输入：[0,3,2,1]
+输出：true
+```
+
+
+
+**提示：**
+
+- `0 <= A.length <= 10000`
+- `0 <= A[i] <= 10000 `
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean validMountainArray(int[] A) {
+        if(A.length < 3) return false;
+        // 记录升降, true 代表当前是升序
+        boolean upOrDown = true;
+        int start = A[0];
+        for(int i=1; i<A.length; i++){
+            // 当为升序, 后一个数小于前一个数时, 改为降序
+            // 当i = 1时, 说明第一个数大于第二个数, 不满足先升后降, 返回false
+            if(upOrDown){
+                if(A[i] < start){
+                    if(i == 1){
+                        return false;
+                    }
+                    upOrDown = false;
+                }  
+            // 当位降序, 出现后一个数大于前一个数时, 返回false
+            }else{
+                if(A[i] >= start){
+                    return false;
+                }
+            }
+            start = A[i];
+        }
+        // 当upOrDown为true时, 说明没有降序, 返回false;
+        return !upOrDown && true;
+    }
+}
+```
+
+## 47.[[977. 有序数组的平方](https://leetcode-cn.com/problems/squares-of-a-sorted-array/)]
+
+**描述**
+
+给定一个按非递减顺序排序的整数数组 `A`，返回每个数字的平方组成的新数组，要求也按非递减顺序排序。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：[-4,-1,0,3,10]
+输出：[0,1,9,16,100]
+```
+
+**示例 2：**
+
+```
+输入：[-7,-3,2,3,11]
+输出：[4,9,9,49,121]
+```
+
+**提示：**
+
+- `1 <= A.length <= 10000`
+- `-10000 <= A[i] <= 10000`
+- `A` 已按非递减顺序排序。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] sortedSquares(int[] A) {
+        int[] res = new int[A.length]; 
+        // 双指针, 一个指向开头, 一个指向末尾
+        // 从后向前赋值, 因为两个指针指向两边, 两边的值其中一个必定是最大值,
+        // 如果从前向后赋值, 无法确定最小值, 最小值可能是中间的数
+        for(int i=0, j=A.length-1, pos=A.length-1; i<=j;){
+            if(A[i] * A[i] > A[j] * A[j]){
+                res[pos] = A[i] * A[i];
+                i++;
+            }else{
+                res[pos] = A[j] * A[j];
+                j--;
+            }
+            pos--;
+        }
+        return res;
+    }
+}
+```
+
+## 48.[[985. 查询后的偶数和](https://leetcode-cn.com/problems/sum-of-even-numbers-after-queries/)]
+
+**描述**
+
+给出一个整数数组 A 和一个查询数组 queries。
+
+对于第 i 次查询，有 val = queries[i][0], index = queries[i][1]，我们会把 val 加到 A[index] 上。然后，第 i 次查询的答案是 A 中偶数值的和。
+
+（此处给定的 index = queries[i][1] 是从 0 开始的索引，每次查询都会永久修改数组 A。）
+
+返回所有查询的答案。你的答案应当以数组 answer 给出，answer[i] 为第 i 次查询的答案。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：A = [1,2,3,4], queries = [[1,0],[-3,1],[-4,0],[2,3]]
+输出：[8,6,2,4]
+解释：
+开始时，数组为 [1,2,3,4]。
+将 1 加到 A[0] 上之后，数组为 [2,2,3,4]，偶数值之和为 2 + 2 + 4 = 8。
+将 -3 加到 A[1] 上之后，数组为 [2,-1,3,4]，偶数值之和为 2 + 4 = 6。
+将 -4 加到 A[0] 上之后，数组为 [-2,-1,3,4]，偶数值之和为 -2 + 4 = 2。
+将 2 加到 A[3] 上之后，数组为 [-2,-1,3,6]，偶数值之和为 -2 + 6 = 4。
+```
+
+**提示：**
+
+- `1 <= A.length <= 10000
+- -10000 <= A[i] <= 10000
+- 1 <= queries.length <= 10000
+- -10000 <= queries[i][0] <= 10000
+- 0 <= queries[i][1] < A.length
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] sortedSquares(int[] A) {
+        int[] res = new int[A.length]; 
+        // 双指针, 一个指向开头, 一个指向末尾
+        // 从后向前赋值, 因为两个指针指向两边, 两边的值其中一个必定是最大值,
+        // 如果从前向后赋值, 无法确定最小值, 最小值可能是中间的数
+        for(int i=0, j=A.length-1, pos=A.length-1; i<=j;){
+            if(A[i] * A[i] > A[j] * A[j]){
+                res[pos] = A[i] * A[i];
+                i++;
+            }else{
+                res[pos] = A[j] * A[j];
+                j--;
+            }
+            pos--;
+        }
+        return res;
+    }
+}
+```
+
+## 49.[[989. 数组形式的整数加法](https://leetcode-cn.com/problems/add-to-array-form-of-integer/)]
 
 **描述**
 
@@ -73,7 +616,7 @@ class Solution {
 }
 ```
 
-## 42.[[999. 可以被一步捕获的棋子数](https://leetcode-cn.com/problems/available-captures-for-rook/)]
+## 50.[[999. 可以被一步捕获的棋子数](https://leetcode-cn.com/problems/available-captures-for-rook/)]
 
 **描述**
 
@@ -198,7 +741,7 @@ class Solution {
 }
 ```
 
-## 43.[[1002. 查找常用字符](https://leetcode-cn.com/problems/find-common-characters/)]
+## 51.[[1002. 查找常用字符](https://leetcode-cn.com/problems/find-common-characters/)]
 
 **描述**
 
@@ -263,7 +806,7 @@ class Solution {
 }
 ```
 
-## 44.[[1010. 总持续时间可被 60 整除的歌曲](https://leetcode-cn.com/problems/pairs-of-songs-with-total-durations-divisible-by-60/)]
+## 52.[[1010. 总持续时间可被 60 整除的歌曲](https://leetcode-cn.com/problems/pairs-of-songs-with-total-durations-divisible-by-60/)]
 
 **描述**
 
@@ -317,7 +860,78 @@ class Solution {
 }
 ```
 
-## 45.[[1018. 可被 5 整除的二进制前缀](https://leetcode-cn.com/problems/binary-prefix-divisible-by-5/)]
+## 53.[[1013. 将数组分成和相等的三个部分](https://leetcode-cn.com/problems/partition-array-into-three-parts-with-equal-sum/)]
+
+**描述**
+
+给你一个整数数组 A，只有可以将其划分为三个和相等的非空部分时才返回 true，否则返回 false。
+
+形式上，如果可以找出索引 i+1 < j 且满足 A[0] + A[1] + ... + A[i] == A[i+1] + A[i+2] + ... + A[j-1] == A[j] + A[j-1] + ... + A[A.length - 1] 就可以将数组三等分。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：[0,2,1,-6,6,-7,9,1,2,0,1]
+输出：true
+解释：0 + 2 + 1 = -6 + 6 - 7 + 9 + 1 = 2 + 0 + 1
+```
+
+**示例 2：**
+
+```
+输入：[0,2,1,-6,6,7,9,-1,2,0,1]
+输出：false
+```
+
+**示例 3：**
+
+```
+输入：[3,3,6,5,-2,2,5,1,-9,4]
+输出：true
+解释：3 + 3 = 6 = 5 - 2 + 2 + 5 + 1 - 9 + 4
+```
+
+**提示:**
+
+- `3 <= A.length <= 50000`
+- `-10^4 <= A[i] <= 10^4`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean canThreePartsEqualSum(int[] A) {
+        int sum = 0;
+        // 先求和, 再除以3
+        for(int a : A){
+            sum += a;
+        }
+        // 记录3份, 每满足一份-1, 最后看是否减为0
+        int part = sum / 3;
+        int count = 3;
+        int partSum = 0;
+        for(int a: A){
+            partSum += a;
+            if(partSum == part){
+                count--;
+                partSum =0;
+            }
+        }
+        if(part == 0 && count <= 0){
+            return true;
+        }
+        return count == 0;
+    }
+}
+```
+
+
+
+## 54.[[1018. 可被 5 整除的二进制前缀](https://leetcode-cn.com/problems/binary-prefix-divisible-by-5/)]
 
 **描述**
 
@@ -383,7 +997,7 @@ class Solution {
 }
 ```
 
-## 46.[[1051. 高度检查器](https://leetcode-cn.com/problems/height-checker/)]
+## 55.[[1051. 高度检查器](https://leetcode-cn.com/problems/height-checker/)]
 
 **描述**
 
@@ -448,7 +1062,13 @@ class Solution {
 }
 ```
 
-## 47.[[1089. 复写零](https://leetcode-cn.com/problems/duplicate-zeros/)]
+## 56.[[1064.不动点](https://leetcode-cn.com/problems/fixed-point)]
+
+## 57.[[1085.最小元素各数位之和](https://leetcode-cn.com/problems/sum-of-digits-in-the-minimum-number)]
+
+## 58.[[1086.前五科的均分](https://leetcode-cn.com/problems/high-five)]
+
+## 59.[[1089. 复写零](https://leetcode-cn.com/problems/duplicate-zeros/)]
 
 **描述**
 
@@ -504,922 +1124,7 @@ class Solution {
 }
 ```
 
-## 48.[[1122. 数组的相对排序](https://leetcode-cn.com/problems/relative-sort-array/)]
-
-**描述**
-
-给你两个数组，arr1 和 arr2，
-
-- arr2 中的元素各不相同
-- arr2 中的每个元素都出现在 arr1 中
-
-对 arr1 中的元素进行排序，使 arr1 中项的相对顺序和 arr2 中的相对顺序相同。未在 arr2 中出现过的元素需要按照升序放在 arr1 的末尾。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：arr1 = [2,3,1,3,2,4,6,7,9,2,19], arr2 = [2,1,4,3,9,6]
-输出：[2,2,2,1,4,3,3,9,6,7,19]
-```
-
-**示例 2：**
-
-```
-输入：[1,2,3]
-输出：null
-解释：调用函数后，输入的数组将被修改为：[1,2,3]
-```
-
-**提示:**
-
-- arr1.length, arr2.length <= 1000
-- 0 <= arr1[i], arr2[i] <= 1000
-- arr2 中的元素 arr2[i] 各不相同
-- arr2 中的每个元素 arr2[i] 都出现在 arr1 中
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] relativeSortArray(int[] arr1, int[] arr2) {
-        // 使用桶排序
-        int[] ans = new int[arr1.length];
-        int[] bucket = new int[1001];
-        for(int num : arr1){
-            bucket[num]++;
-        }
-        int index = 0;
-        for(int num : arr2){
-            while(bucket[num]-- > 0){
-                ans[index++] = num;
-            }
-        }
-        for(int i=1; i<bucket.length; i++){
-            while(bucket[i]-- > 0){
-                ans[index++] = i;
-            }
-        }
-        return ans;
-    }
-}
-```
-
-## 49.[[1128. 等价多米诺骨牌对的数量](https://leetcode-cn.com/problems/number-of-equivalent-domino-pairs/)]
-
-**描述**
-
-给你一个由一些多米诺骨牌组成的列表 dominoes。
-
-如果其中某一张多米诺骨牌可以通过旋转 0 度或 180 度得到另一张多米诺骨牌，我们就认为这两张牌是等价的。
-
-形式上，dominoes[i] = [a, b] 和 dominoes[j] = [c, d] 等价的前提是 a==c 且 b==d，或是 a==d 且 b==c。
-
-在 0 <= i < j < dominoes.length 的前提下，找出满足 dominoes[i] 和 dominoes[j] 等价的骨牌对 (i, j) 的数量。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：dominoes = [[1,2],[2,1],[3,4],[5,6]]
-输出：1
-```
-
-**提示:**
-
-- `1 <= dominoes.length <= 40000`
-- `1 <= dominoes[i][j] <= 9`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    // 使用桶排序
-    public int numEquivDominoPairs(int[][] dominoes) {
-        int[] bucket = new int[100];
-        int count = 0;
-        for(int[] i :dominoes){
-            if(i[0] > i[1]){
-                // 是两个数较小的数*10 + 较大的数, 组成一个两位数
-                bucket[i[1]*10 + i[0]]++;
-            }else{
-                bucket[i[0]*10 + i[1]]++;
-            }
-        }
-        // 因为是两位数, 所以从11开始
-        for(int i=11; i<100; i++){
-            if(bucket[i] >= 2){
-                count += bucket[i]*(bucket[i]-1) / 2;
-            }
-        }
-        return count;
-    }
-}
-```
-
-## 50.[[1160. 拼写单词](https://leetcode-cn.com/problems/find-words-that-can-be-formed-by-characters/)]
-
-**描述**
-
-给你一份『词汇表』（字符串数组） words 和一张『字母表』（字符串） chars。
-
-假如你可以用 chars 中的『字母』（字符）拼写出 words 中的某个『单词』（字符串），那么我们就认为你掌握了这个单词。
-
-注意：每次拼写（指拼写词汇表中的一个单词）时，chars 中的每个字母都只能用一次。
-
-返回词汇表 words 中你掌握的所有单词的 长度之和。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：words = ["cat","bt","hat","tree"], chars = "atach"
-输出：6
-解释： 
-可以形成字符串 "cat" 和 "hat"，所以答案是 3 + 3 = 6。
-```
-
-**示例2:**
-
-```
-输入：words = ["hello","world","leetcode"], chars = "welldonehoneyr"
-输出：10
-解释：
-可以形成字符串 "hello" 和 "world"，所以答案是 5 + 5 = 10。
-```
-
-**提示:**
-
-- 1 <= words.length <= 1000
-- 1 <= words[i].length, chars.length <= 100
-- 所有字符串中都仅包含小写英文字母
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    // 使用桶排序
-    public int countCharacters(String[] words, String chars) {
-        int[] bucket = new int[26];
-        int[] tmp = new int[26];
-        for(int i=0; i<chars.length(); i++){
-            // 97 是 a对应的码
-            bucket[chars.charAt(i) - 97]++;
-        }
-        int ans = 0;
-        for(String word : words){
-            System.arraycopy(bucket,0,tmp,0,26);
-            boolean is = true;
-            for(int i=0; i<word.length(); i++){
-                if(tmp[word.charAt(i) - 97]-- == 0){
-                    is = false;
-                    break;
-                }
-            }
-            ans += is ? word.length() : 0;
-        }
-        return ans;
-    }
-}
-```
-
-## 51.[[1170. 比较字符串最小字母出现频次](https://leetcode-cn.com/problems/compare-strings-by-frequency-of-the-smallest-character/)]
-
-**描述**
-
-我们来定义一个函数 f(s)，其中传入参数 s 是一个非空字符串；该函数的功能是统计 s  中（按字典序比较）最小字母的出现频次。
-
-例如，若 s = "dcce"，那么 f(s) = 2，因为最小的字母是 "c"，它出现了 2 次。
-
-现在，给你两个字符串数组待查表 queries 和词汇表 words，请你返回一个整数数组 answer 作为答案，其中每个 answer[i] 是满足 f(queries[i]) < f(W) 的词的数目，W 是词汇表 words 中的词。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：queries = ["cbd"], words = ["zaaaz"]
-输出：[1]
-解释：查询 f("cbd") = 1，而 f("zaaaz") = 3 所以 f("cbd") < f("zaaaz")。
-```
-
-**示例2:**
-
-```
-输入：queries = ["bbb","cc"], words = ["a","aa","aaa","aaaa"]
-输出：[1,2]
-解释：第一个查询 f("bbb") < f("aaaa")，第二个查询 f("aaa") 和 f("aaaa") 都 > f("cc")。
-```
-
-**提示:**
-
-- 1 <= queries.length <= 2000
-- 1 <= words.length <= 2000
-- 1 <= queries[i].length, words[i].length <= 10
-- queries[i][j], words[i][j] 都是小写英文字母
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] numSmallerByFrequency(String[] queries, String[] words) {
-        int[] wCount = new int[words.length];
-        int[] ans = new int[queries.length];
-        for(int i=0; i<words.length; i++){
-            wCount[i] = f(words[i]);
-        }
-        for(int i=0; i<queries.length; i++){
-            int len = f(queries[i]);
-            int count = 0;
-            for(int wc : wCount){
-                if(len < wc){
-                    count++;
-                }
-            }
-            ans[i] = count;
-        }
-        return ans;
-    }
-	// 计算最小的字母, 出现的次数
-    public int f(String s){
-        char min = s.charAt(0);
-        int count = 1;
-        for(int i=1; i<s.length(); i++){
-            char tmp = s.charAt(i);
-            if(tmp == min){
-                count++;
-            }else if(tmp < min){
-                min = s.charAt(i);
-                count = 1;
-            }
-        }
-        return count;
-    }
-}
-```
-
-## 52.[[1184. 公交站间的距离](https://leetcode-cn.com/problems/distance-between-bus-stops/)]
-
-**描述**
-
-环形公交路线上有 n 个站，按次序从 0 到 n - 1 进行编号。我们已知每一对相邻公交站之间的距离，distance[i] 表示编号为 i 的车站和编号为 (i + 1) % n 的车站之间的距离。
-
-环线上的公交车都可以按顺时针和逆时针的方向行驶。
-
-返回乘客从出发点 start 到目的地 destination 之间的最短距离。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：distance = [1,2,3,4], start = 0, destination = 1
-输出：1
-解释：公交站 0 和 1 之间的距离是 1 或 9，最小值是 1。
-```
-
-**示例2:**
-
-```
-输入：distance = [1,2,3,4], start = 0, destination = 2
-输出：3
-解释：公交站 0 和 2 之间的距离是 3 或 7，最小值是 3。
-```
-
-**示例3:**
-
-```
-输入：distance = [1,2,3,4], start = 0, destination = 3
-输出：4
-解释：公交站 0 和 3 之间的距离是 6 或 4，最小值是 4。
-```
-
-**提示:**
-
-- 1 <= n <= 10^4
-- distance.length == n
-- 0 <= start, destination < n
-- 0 <= distance[i] <= 10^4
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int distanceBetweenBusStops(int[] distance, int start, int destination) {
-        int one = 0, two = 0;
-        // 让起始点, 始终小于终点
-        if(start > destination){
-            int tmp = start;
-            start = destination;
-            destination = tmp;
-        }
-        // 在起始点-终点之外的路线, 相加记为two路线
-        for(int i=0; i<start; i++){
-            two += distance[i];
-        }
-        for(int i=start; i<destination; i++){
-            one += distance[i];
-        }
-        for(int i=destination; i<distance.length; i++){
-            two += distance[i];
-        }
-        return Math.min(one, two);
-    }
-}
-```
-
-## 53.[[1200. 最小绝对差](https://leetcode-cn.com/problems/minimum-absolute-difference/)]
-
-**描述**
-
-给你个整数数组 `arr`，其中每个元素都 **不相同**。
-
-请你找到所有具有最小绝对差的元素对，并且按升序的顺序返回。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：arr = [4,2,1,3]
-输出：[[1,2],[2,3],[3,4]]
-```
-
-**示例2:**
-
-```
-输入：arr = [1,3,6,10,15]
-输出：[[1,3]]
-```
-
-**示例3:**
-
-```
-输入：arr = [3,8,-10,23,19,-4,-14,27]
-输出：[[-14,-10],[19,23],[23,27]]
-```
-
-**提示:**
-
-- `2 <= arr.length <= 10^5`
-- `-10^6 <= arr[i] <= 10^6`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public List<List<Integer>> minimumAbsDifference(int[] arr) {
-        List<List<Integer>> ans = new ArrayList<>();
-        // 先排序
-        Arrays.sort(arr);
-        int min = Integer.MAX_VALUE;
-        // 求出最小差值
-        for(int i=0; i<arr.length-1; i++){
-            min = Math.min(min, arr[i+1] - arr[i]);
-        }
-        // 相邻的两个数的差等于最小差值的存起来
-        for(int i=0; i<arr.length-1; i++){
-            if(arr[i+1] - arr[i] == min){
-                List<Integer> tmp = new ArrayList<>();
-                tmp.add(arr[i]);
-                tmp.add(arr[i+1]);
-                ans.add(tmp);
-            }
-        }
-        return ans;
-    }
-}
-```
-
-## 54.[[1217. 玩筹码](https://leetcode-cn.com/problems/minimum-cost-to-move-chips-to-the-same-position/)]
-
-**描述**
-
-数轴上放置了一些筹码，每个筹码的位置存在数组 chips 当中。
-
-你可以对 任何筹码 执行下面两种操作之一（不限操作次数，0 次也可以）：
-
-- 将第 i 个筹码向左或者右移动 2 个单位，代价为 0。
-- 将第 i 个筹码向左或者右移动 1 个单位，代价为 1。
-
-最开始的时候，同一位置上也可能放着两个或者更多的筹码。
-
-返回将所有筹码移动到同一位置（任意位置）上所需要的最小代价。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：chips = [1,2,3]
-输出：1
-解释：第二个筹码移动到位置三的代价是 1，第一个筹码移动到位置三的代价是 0，总代价为 1。
-```
-
-**示例2:**
-
-```
-输入：chips = [2,2,2,3,3]
-输出：2
-解释：第四和第五个筹码移动到位置二的代价都是 1，所以最小总代价为 2。
-```
-
-**提示:**
-
-- `1 <= chips.length <= 100`
-- `1 <= chips[i] <= 10^9`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    // 奇数到奇数, 偶数到偶数消耗是0
-    // 所以只要确定, 是奇数到偶数, 还是偶数到奇数, 就是比奇数和偶数哪个少
-    public int minCostToMoveChips(int[] position) {
-        int odd = 0, even = 0;
-        for(int num : position){
-            if(num % 2 == 0) even++;
-            else odd++;
-        }
-        return Math.min(odd, even);
-    }
-}
-```
-
-## 55.[[1232. 缀点成线](https://leetcode-cn.com/problems/check-if-it-is-a-straight-line/)]
-
-**描述**
-
-在一个 XY 坐标系中有一些点，我们用数组 coordinates 来分别记录它们的坐标，其中 coordinates[i] = [x, y] 表示横坐标为 x、纵坐标为 y 的点。
-
-请你来判断，这些点是否在该坐标系中属于同一条直线上，是则返回 true，否则请返回 false。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：coordinates = [[1,2],[2,3],[3,4],[4,5],[5,6],[6,7]]
-输出：true
-```
-
-**示例2:**
-
-```
-输入：coordinates = [[1,1],[2,2],[3,4],[4,5],[5,6],[7,7]]
-输出：false
-```
-
-**提示:**
-
-- 2 <= coordinates.length <= 1000
-- coordinates[i].length == 2
-- -10^4 <= coordinates[i][0], coordinates[i][1] <= 10^4
-- coordinates 中不含重复的点
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public boolean checkStraightLine(int[][] coordinates) {
-        // 使用数学公式, 连续的三个点 p1,p2,p3 (x2-x1)*(y3-y2) == (x3-x2)*(y2-y1)
-        for(int i=1; i<coordinates.length-1; i++){
-            int res1 = (coordinates[i][0] - coordinates[i-1][0]) 
-                					* (coordinates[i+1][1] - coordinates[i][1]);
-            int res2 = (coordinates[i+1][0] - coordinates[i][0]) 
-                					* (coordinates[i][1] - coordinates[i-1][1]);
-            if(res1 != res2){
-                return false;
-            }
-        }
-        return true;
-    }
-}
-```
-
-## 56.[[1252. 奇数值单元格的数目](https://leetcode-cn.com/problems/cells-with-odd-values-in-a-matrix/)]
-
-**描述**
-
-给你一个 n 行 m 列的矩阵，最开始的时候，每个单元格中的值都是 0。
-
-另有一个索引数组 indices，indices[i] = [ri, ci] 中的 ri 和 ci 分别表示指定的行和列（从 0 开始编号）。
-
-你需要将每对 [ri, ci] 指定的行和列上的所有单元格的值加 1。
-
-请你在执行完所有 indices 指定的增量操作后，返回矩阵中 「奇数值单元格」 的数目。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：n = 2, m = 3, indices = [[0,1],[1,1]]
-输出：6
-解释：最开始的矩阵是 [[0,0,0],[0,0,0]]。
-第一次增量操作后得到 [[1,2,1],[0,1,0]]。
-最后的矩阵是 [[1,3,1],[1,3,1]]，里面有 6 个奇数。
-```
-
-**示例2:**
-
-```
-输入：n = 2, m = 2, indices = [[1,1],[0,0]]
-输出：0
-解释：最后的矩阵是 [[2,2],[2,2]]，里面没有奇数。
-```
-
-**提示:**
-
-- 1 <= n <= 50
-- 1 <= m <= 50
-- 1 <= indices.length <= 100
-- 0 <= indices[i][0] < n
-- 0 <= indices[i][1] < m
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int oddCells(int n, int m, int[][] indices) {
-        // row和col分别记录对应索引的行和列, 被加了多少次1
-        int[] row = new int[n];
-        int[] col = new int[m];
-        for(int[] indicy : indices){
-            row[indicy[0]]++;
-            col[indicy[1]]++;
-        }
-        int count = 0;
-        int rowCount = 0;
-        for(int num : row){
-            // 被加了奇数次的行, 格子数量加一行的数量
-            // 记录奇数行的数量
-            if(num % 2 == 1){
-                count += m;
-                rowCount++;
-            }
-        }
-        for(int num : col){
-            // 被加了奇数次的列, 格子数量加一列的数量
-            // 然后列和行会有一个格重叠, 并且重叠的格必定是偶数, 所以需要 减掉2*奇数行的数量, 
-            // 每有一个奇数行,就会有一个格重叠
-            // 例子 [2,1]
-            //      [1,0]
-            // 行+列 =4,  实际上却是2
-            if(num % 2 == 1){
-                count += n - rowCount * 2;
-            }
-        }
-        return count;
-    }
-}
-```
-
-## 57.[[1260. 二维网格迁移](https://leetcode-cn.com/problems/shift-2d-grid/)]
-
-**描述**
-
-给你一个 m 行 n 列的二维网格 grid 和一个整数 k。你需要将 grid 迁移 k 次。
-
-每次「迁移」操作将会引发下述活动：
-
-- 位于 grid[i][j] 的元素将会移动到 grid[i][j + 1]。
-- 位于 grid[i][n - 1] 的元素将会移动到 grid[i + 1][0]。
-- 位于 grid[m - 1][n - 1] 的元素将会移动到 grid[0][0]。
-
-请你返回 k 次迁移操作后最终得到的 二维网格。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：grid = [[1,2,3],[4,5,6],[7,8,9]], k = 1
-输出：[[9,1,2],[3,4,5],[6,7,8]]
-```
-
-**示例2:**
-
-```
-输入：grid = [[3,8,1,9],[19,7,2,5],[4,6,11,10],[12,0,21,13]], k = 4
-输出：[[12,0,21,13],[3,8,1,9],[19,7,2,5],[4,6,11,10]]
-```
-
-**示例2:**
-
-```
-输入：grid = [[1,2,3],[4,5,6],[7,8,9]], k = 9
-输出：[[1,2,3],[4,5,6],[7,8,9]]
-```
-
-**提示:**
-
-- 1 <= grid.length <= 50
-- 1 <= grid[i].length <= 50
-- -1000 <= grid[i][j] <= 1000
-- 0 <= k <= 100
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public List<List<Integer>> shiftGrid(int[][] grid, int k) {
-        List<List<Integer>> ans = new ArrayList<>();
-        List<Integer> list = new ArrayList<>();
-        int len = grid.length;
-        int clen = grid[0].length;
-        // 算出最小移动次数
-        k = k % (len * clen);
-        // 等于0时, 直接转换list
-        if(k == 0){
-            for(int i=0; i<len; i++){
-                list = new ArrayList<>();
-                for(int j=0; j<clen; j++){
-                    list.add(grid[i][j]);
-                }
-                ans.add(list);
-            }
-            return ans;
-        }
-        int[] tmp = getTmp(grid, k);
-        // 将取出的后面的数字, 加入到list的前面
-        for(int i=k-1; i>=0; i--){
-            if(list.size() == clen){
-                ans.add(list);
-                list = new ArrayList<>();
-            }
-            list.add(tmp[i]);
-        }
-		// 再将剩余的填充
-        for(int i=0; i<len; i++){
-            if(ans.size() == len){
-                return ans;
-            }
-            for(int j=0; j<clen; j++){
-                if(list.size() == clen){
-                    ans.add(list);
-                    list = new ArrayList<>();
-                }
-                list.add(grid[i][j]);
-            }
-        }
-        return ans;
-    }
-    // 从后向前取出, 要移动到前面的数字
-    public int[] getTmp(int[][] grid, int k){
-        int[] tmp = new int[k];
-        int start = 0;
-        for(int i=grid.length-1; i>=0; i--){
-            for(int j=grid[i].length-1; j>=0; j--){
-                tmp[start++] = grid[i][j];
-                if(start == k){
-                    return tmp;
-                }
-            }
-        }
-        return tmp;
-    }
-}
-```
-
-## 58.[[1266. 访问所有点的最小时间](https://leetcode-cn.com/problems/minimum-time-visiting-all-points/)]
-
-**描述**
-
-平面上有 n 个点，点的位置用整数坐标表示 points[i] = [xi, yi]。请你计算访问所有这些点需要的最小时间（以秒为单位）。
-
-你可以按照下面的规则在平面上移动：
-
-- 每一秒沿水平或者竖直方向移动一个单位长度，或者跨过对角线（可以看作在一秒内向水平和竖直方向各移动一个单位长度）。
-- 必须按照数组中出现的顺序来访问这些点。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：points = [[1,1],[3,4],[-1,0]]
-输出：7
-解释：一条最佳的访问路径是： [1,1] -> [2,2] -> [3,3] -> [3,4] -> [2,3] -> [1,2] -> [0,1] -> [-1,0]   
-从 [1,1] 到 [3,4] 需要 3 秒 
-从 [3,4] 到 [-1,0] 需要 4 秒
-一共需要 7 秒
-```
-
-**示例2:**
-
-```
-输入：points = [[3,2],[-2,2]]
-输出：5
-```
-
-**提示:**
-
-- points.length == n
-- 1 <= n <= 100
-- points[i].length == 2
-- -1000 <= points[i][0], points[i][1] <= 1000
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    // 取两个点 Math.max(x1-x0,y1-y0);
-    public int minTimeToVisitAllPoints(int[][] points) {
-        int seconds = 0;
-        for(int i=1; i<points.length; i++){
-            seconds += Math.max(Math.abs(points[i][0]-points[i-1][0]), Math.abs(points[i][1]-points[i-1][1]));
-        }
-        return seconds;
-    }
-}
-```
-
-## 59.[[1275. 找出井字棋的获胜者](https://leetcode-cn.com/problems/find-winner-on-a-tic-tac-toe-game/)]
-
-**描述**
-
-A 和 B 在一个 3 x 3 的网格上玩井字棋。
-
-井字棋游戏的规则如下：
-
-- 玩家轮流将棋子放在空方格 (" ") 上。
-- 第一个玩家 A 总是用 "X" 作为棋子，而第二个玩家 B 总是用 "O" 作为棋子。
-- "X" 和 "O" 只能放在空方格中，而不能放在已经被占用的方格上。
-- 只要有 3 个相同的（非空）棋子排成一条直线（行、列、对角线）时，游戏结束。
-- 如果所有方块都放满棋子（不为空），游戏也会结束。
-- 游戏结束后，棋子无法再进行任何移动。
-
-给你一个数组 moves，其中每个元素是大小为 2 的另一个数组（元素分别对应网格的行和列），它按照 A 和 B 的行动顺序（先 A 后 B）记录了两人各自的棋子位置。
-
-如果游戏存在获胜者（A 或 B），就返回该游戏的获胜者；如果游戏以平局结束，则返回 "Draw"；如果仍会有行动（游戏未结束），则返回 "Pending"。
-
-你可以假设 moves 都 有效（遵循井字棋规则），网格最初是空的，A 将先行动。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：moves = [[0,0],[2,0],[1,1],[2,1],[2,2]]
-输出："A"
-解释："A" 获胜，他总是先走。
-"X  "    "X  "    "X  "    "X  "    "X  "
-"   " -> "   " -> " X " -> " X " -> " X "
-"   "    "O  "    "O  "    "OO "    "OOX"
-```
-
-**示例2:**
-
-```
-输入：moves = [[0,0],[1,1],[0,1],[0,2],[1,0],[2,0]]
-输出："B"
-解释："B" 获胜。
-"X  "    "X  "    "XX "    "XXO"    "XXO"    "XXO"
-"   " -> " O " -> " O " -> " O " -> "XO " -> "XO " 
-"   "    "   "    "   "    "   "    "   "    "O  "
-```
-
-**示例3:**
-
-```
-输入：moves = [[0,0],[1,1],[2,0],[1,0],[1,2],[2,1],[0,1],[0,2],[2,2]]
-输出："Draw"
-输出：由于没有办法再行动，游戏以平局结束。
-"XXO"
-"OOX"
-"XOX"
-```
-
-**示例4:**
-
-```
-输入：moves = [[0,0],[1,1]]
-输出："Pending"
-解释：游戏还没有结束。
-"X  "
-" O "
-"   "
-```
-
-
-
-**提示:**
-
-- points.length == n
-- 1 <= n <= 100
-- points[i].length == 2
-- -1000 <= points[i][0], points[i][1] <= 1000
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public String tictactoe(int[][] moves) {
-        int m = moves.length;
-        // 用数组记录0-2行、0-2列、正对角线、副对角线是否已满3个棋子
-        // count[0-2]对应0-2行、count[3-5]对应0-2列、count[6]对应正对角线、count[7]对应副对角线
-        int[] count = new int[8];
-        // 只需考虑最后一个落棋的人, 最后落棋的人才有可能胜利
-        // 倒序统计此人走棋情况
-        for(int i = m - 1; i >= 0; i -= 2) {
-            // 此棋对行的影响
-            count[moves[i][0]]++;
-            // 此棋对列的影响
-            count[moves[i][1] + 3]++;	
-            // 此棋对正对角线的影响
-            if(moves[i][0] == moves[i][1])
-                count[6]++;
-            // 此棋对副对角线的影响 (
-            // 此处为3x3的情况，其余大小的棋盘可以类推
-            if(moves[i][0] + moves[i][1] == 2)
-                count[7]++;
-            // 满3个棋子则胜利
-            if(count[moves[i][0]] == 3 || count[moves[i][1] + 3] == 3 || 
-                    count[6] == 3 || count[7] == 3) 
-                // A先B后 则总长度为偶时 最后为B 反之为A
-                return m % 2 == 0 ? "B" : "A";	
-            }
-        // 未胜时，棋盘未下满则继续
-        if(moves.length < 9)
-            return "Pending";
-        // 未胜时，棋盘下满则平局结束
-        return "Draw";
-    }
-}
-```
-
-## 60.[[1287. 有序数组中出现次数超过25%的元素](https://leetcode-cn.com/problems/element-appearing-more-than-25-in-sorted-array/)]
-
-**描述**
-
-给你一个非递减的 **有序** 整数数组，已知这个数组中恰好有一个整数，它的出现次数超过数组元素总数的 25%。
-
-请你找到并返回这个整数
-
-**示例**
-
-**示例 1：**
-
-```
-输入：arr = [1,2,2,6,6,6,6,7,10]
-输出：6
-```
-
-**提示:**
-
-- `1 <= arr.length <= 10^4`
-- `0 <= arr[i] <= 10^5`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int findSpecialInteger(int[] arr) {
-        // 只需比较当前数和  +1/4位置的数
-        int target = arr.length / 4;
-        for(int i=0; i<arr.length-target; i++){
-            if(arr[i] == arr[i+target]){
-                return arr[i];
-            }
-        }
-        return -1;
-    }
-}
-```
-
-
-
-
+## 60.[[1099.小于 K 的两数之和](https://leetcode-cn.com/problems/two-sum-less-than-k)]
 
 
 
