--- a/面试/算法/数组/简单/数组-简单(1-20).md
+++ b/面试/算法/数组/简单/数组-简单(1-20).md
@@ -710,7 +710,86 @@ class Solution {
 }
 ```
 
-## 16.[[268. 丢失的数字](https://leetcode-cn.com/problems/missing-number/)]
+## 16.[[228. 汇总区间](https://leetcode-cn.com/problems/summary-ranges/)]
+
+**描述**
+
+给定一个无重复元素的有序整数数组 nums 。
+
+返回 恰好覆盖数组中所有数字 的 最小有序 区间范围列表。也就是说，nums 的每个元素都恰好被某个区间范围所覆盖，并且不存在属于某个范围但不属于 nums 的数字 x 。
+
+列表中的每个区间范围 [a,b] 应该按如下格式输出：
+
+- "a->b" ，如果 a != b
+- "a" ，如果 a == b
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [0,1,2,4,5,7]
+输出：["0->2","4->5","7"]
+解释：区间范围是：
+[0,2] --> "0->2"
+[4,5] --> "4->5"
+[7,7] --> "7"
+```
+
+**示例 2:**
+
+```
+输入：nums = [0,2,3,4,6,8,9]
+输出：["0","2->4","6","8->9"]
+解释：区间范围是：
+[0,0] --> "0"
+[2,4] --> "2->4"
+[6,6] --> "6"
+[8,9] --> "8->9"
+```
+
+**示例 3:**
+
+```
+输入：nums = []
+输出：[]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<String> summaryRanges(int[] nums) {
+        List<String> ans = new ArrayList<>();
+        StringBuilder sb = new StringBuilder();
+        int start = 0, end = 0;
+        for(int i=1; i<=nums.length; i++){
+            if(i < nums.length && nums[i] == nums[end] + 1){
+                end = i;
+            }else if(i == nums.length || nums[i] != nums[end] + 1){
+                if(start == end){
+                    sb.delete(0, sb.length());
+                    sb.append(nums[end]);
+                    ans.add(sb.toString());
+                }else{
+                    sb.delete(0, sb.length());
+                    sb.append(nums[start]).append("->").append(nums[end]);
+                    ans.add(sb.toString());
+                }
+                start = i;
+                end = i;
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 17.[[243.最短单词距离](https://leetcode-cn.com/problems/shortest-word-distance) ]
+
+## 18.[[268. 丢失的数字](https://leetcode-cn.com/problems/missing-number/)]
 
 **描述**
 
@@ -767,7 +846,7 @@ class Solution {
 }
 ```
 
-## 17.[[283. 移动零](https://leetcode-cn.com/problems/move-zeroes/)]
+## 19.[[283. 移动零](https://leetcode-cn.com/problems/move-zeroes/)]
 
 **描述**
 
@@ -809,7 +888,7 @@ class Solution {
 }
 ```
 
-## 18.[[414. 第三大的数](https://leetcode-cn.com/problems/third-maximum-number/)]
+## 20.[[414. 第三大的数](https://leetcode-cn.com/problems/third-maximum-number/)]
 
 **描述**
 
@@ -869,102 +948,6 @@ class Solution {
             }
         }
         return third == Long.MIN_VALUE ? (int)first : (int)third;
-    }
-}
-```
-
-## 19.[[448. 找到所有数组中消失的数字](https://leetcode-cn.com/problems/find-all-numbers-disappeared-in-an-array/)]
-
-**描述**
-
-给定一个范围在  1 ≤ a[i] ≤ n ( n = 数组大小 ) 的 整型数组，数组中的元素一些出现了两次，另一些只出现一次。
-
-找到所有在 [1, n] 范围之间没有出现在数组中的数字。
-
-您能在不使用额外空间且时间复杂度为O(n)的情况下完成这个任务吗? 你可以假定返回的数组不算在额外空间内。
-
-**示例**
-
-**示例 1：**
-
-```
-输入:
-[4,3,2,7,8,2,3,1]
-
-输出:
-[5,6]
-```
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public List<Integer> findDisappearedNumbers(int[] nums) {
-        List<Integer> res = new ArrayList<>(); 
-        int n = nums.length;
-        // 取出每个数, 把这个数-1, 当作索引, 对该索引值的位置进行标记(*-1), 变为负数
-        for(int i=0; i<n; i++){
-            // 取出数字, 因为有可能当前的数字已被 * -1 所以取绝对值
-            int num = Math.abs(nums[i]);
-            // 计算索引
-            int index = num - 1;
-            // 如果当前值小于0, 就说明已经标记过了
-            if(nums[index] > 0){
-                nums[index] *= -1;
-            }
-        }
-        // 再次遍历, 不为负数的值, 说明没被标记
-        for(int i=0; i<n; i++){
-            if(nums[i] > 0){
-                res.add(i+1);                
-            }
-        }
-        return res;
-    }
-}
-```
-
-## 20.[[485. 最大连续1的个数](https://leetcode-cn.com/problems/max-consecutive-ones/)]
-
-**描述**
-
-给定一个二进制数组， 计算其中最大连续1的个数。
-
-**示例**
-
-**示例 1：**
-
-```
-输入: [1,1,0,1,1,1]
-输出: 3
-解释: 开头的两位和最后的三位都是连续1，所以最大连续1的个数是 3.
-```
-
-**注意：**
-
-- 输入的数组只包含 `0` 和`1`。
-- 输入数组的长度是正整数，且不超过 10,000。
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int findMaxConsecutiveOnes(int[] nums) {
-        int max = 0;
-        int tmp = 0;
-        for(int num : nums){
-            if(num == 1){
-                tmp++;
-            }else{
-                max = Math.max(max, tmp);
-                tmp = 0;
-            }
-        }
-        return Math.max(max, tmp);
     }
 }
 ```
