--- a/面试/算法/数组/简单/数组-简单(21-40).md
+++ b/面试/算法/数组/简单/数组-简单(21-40).md
@@ -8,7 +8,103 @@
 
 # 数组-简单(21-40)
 
-## 21.[[509. 斐波那契数](https://leetcode-cn.com/problems/fibonacci-number/)]
+## 21.[[448. 找到所有数组中消失的数字](https://leetcode-cn.com/problems/find-all-numbers-disappeared-in-an-array/)]
+
+**描述**
+
+给定一个范围在  1 ≤ a[i] ≤ n ( n = 数组大小 ) 的 整型数组，数组中的元素一些出现了两次，另一些只出现一次。
+
+找到所有在 [1, n] 范围之间没有出现在数组中的数字。
+
+您能在不使用额外空间且时间复杂度为O(n)的情况下完成这个任务吗? 你可以假定返回的数组不算在额外空间内。
+
+**示例**
+
+**示例 1：**
+
+```
+输入:
+[4,3,2,7,8,2,3,1]
+
+输出:
+[5,6]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<Integer> findDisappearedNumbers(int[] nums) {
+        List<Integer> res = new ArrayList<>(); 
+        int n = nums.length;
+        // 取出每个数, 把这个数-1, 当作索引, 对该索引值的位置进行标记(*-1), 变为负数
+        for(int i=0; i<n; i++){
+            // 取出数字, 因为有可能当前的数字已被 * -1 所以取绝对值
+            int num = Math.abs(nums[i]);
+            // 计算索引
+            int index = num - 1;
+            // 如果当前值小于0, 就说明已经标记过了
+            if(nums[index] > 0){
+                nums[index] *= -1;
+            }
+        }
+        // 再次遍历, 不为负数的值, 说明没被标记
+        for(int i=0; i<n; i++){
+            if(nums[i] > 0){
+                res.add(i+1);                
+            }
+        }
+        return res;
+    }
+}
+```
+
+## 22.[[485. 最大连续1的个数](https://leetcode-cn.com/problems/max-consecutive-ones/)]
+
+**描述**
+
+给定一个二进制数组， 计算其中最大连续1的个数。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [1,1,0,1,1,1]
+输出: 3
+解释: 开头的两位和最后的三位都是连续1，所以最大连续1的个数是 3.
+```
+
+**注意：**
+
+- 输入的数组只包含 `0` 和`1`。
+- 输入数组的长度是正整数，且不超过 10,000。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int findMaxConsecutiveOnes(int[] nums) {
+        int max = 0;
+        int tmp = 0;
+        for(int num : nums){
+            if(num == 1){
+                tmp++;
+            }else{
+                max = Math.max(max, tmp);
+                tmp = 0;
+            }
+        }
+        return Math.max(max, tmp);
+    }
+}
+```
+
+## 23.[[509. 斐波那契数](https://leetcode-cn.com/problems/fibonacci-number/)]
 
 **描述**
 
@@ -68,7 +164,64 @@ class Solution {
 }
 ```
 
-## 22.[[566. 重塑矩阵](https://leetcode-cn.com/problems/reshape-the-matrix/)]
+## 24.[[561. 数组拆分 I](https://leetcode-cn.com/problems/array-partition-i/)] !*
+
+**描述**
+
+给定长度为 2n 的整数数组 nums ，你的任务是将这些数分成 n 对, 例如 (a1, b1), (a2, b2), ..., (an, bn) ，使得从 1 到 n 的 min(ai, bi) 总和最大。
+
+返回该 最大总和 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [1,4,3,2]
+输出：4
+解释：所有可能的分法（忽略元素顺序）为：
+1. (1, 4), (2, 3) -> min(1, 4) + min(2, 3) = 1 + 2 = 3
+2. (1, 3), (2, 4) -> min(1, 3) + min(2, 4) = 1 + 2 = 3
+3. (1, 2), (3, 4) -> min(1, 2) + min(3, 4) = 1 + 3 = 4
+所以最大总和为 4
+```
+
+**示例 2：**
+
+```
+输入：nums = [6,2,6,5,1,2]
+输出：9
+解释：最优的分法为 (2, 1), (2, 5), (6, 6). min(2, 1) + min(2, 5) + min(6, 6) = 1 + 2 + 6 = 9
+```
+
+**提示**
+
+- `1 <= n <= 10^4`
+- `nums.length == 2 * n`
+- `-10^4 <= nums[i] <= 10^4`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int arrayPairSum(int[] nums) {
+        Arrays.sort(nums);
+        int result = 0;
+        int index = 0;
+        for(int num: nums){
+            if(index % 2 == 0){
+                result += num;
+            }
+            index++;
+        }
+        return result;
+    }
+}
+```
+
+## 25.[[566. 重塑矩阵](https://leetcode-cn.com/problems/reshape-the-matrix/)]
 
 **描述**
 
@@ -141,7 +294,7 @@ class Solution {
 }
 ```
 
-## 23.[[605. 种花问题](https://leetcode-cn.com/problems/can-place-flowers/)]
+## 26.[[605. 种花问题](https://leetcode-cn.com/problems/can-place-flowers/)]
 
 **描述**
 
@@ -193,7 +346,7 @@ class Solution {
 }
 ```
 
-## 24.[[628. 三个数的最大乘积](https://leetcode-cn.com/problems/maximum-product-of-three-numbers/)]
+## 27.[[628. 三个数的最大乘积](https://leetcode-cn.com/problems/maximum-product-of-three-numbers/)]
 
 **描述**
 
@@ -259,7 +412,7 @@ class Solution {
 }
 ```
 
-## 25.[[643. 子数组最大平均数 I](https://leetcode-cn.com/problems/maximum-average-subarray-i/)]
+## 28.[[643. 子数组最大平均数 I](https://leetcode-cn.com/problems/maximum-average-subarray-i/)]
 
 **描述**
 
@@ -305,7 +458,64 @@ class Solution {
 }
 ```
 
-## 26.[[665. 非递减数列](https://leetcode-cn.com/problems/non-decreasing-array/)]
+## 29.[[661. 图片平滑器](https://leetcode-cn.com/problems/image-smoother/)] !*
+
+**描述**
+
+包含整数的二维矩阵 M 表示一个图片的灰度。你需要设计一个平滑器来让每一个单元的灰度成为平均灰度 (向下舍入) ，平均灰度的计算是周围的8个单元和它本身的值求平均，如果周围的单元格不足八个，则尽可能多的利用它们。
+
+**示例**
+
+**示例 1：**
+
+```
+输入:
+[[1,1,1],
+ [1,0,1],
+ [1,1,1]]
+输出:
+[[0, 0, 0],
+ [0, 0, 0],
+ [0, 0, 0]]
+解释:
+对于点 (0,0), (0,2), (2,0), (2,2): 平均(3/4) = 平均(0.75) = 0
+对于点 (0,1), (1,0), (1,2), (2,1): 平均(5/6) = 平均(0.83333333) = 0
+对于点 (1,1): 平均(8/9) = 平均(0.88888889) = 0
+```
+
+**注意:**
+
+1. 给定矩阵中的整数范围为 [0, 255]。
+2. 矩阵的长和宽的范围均为 [1, 150]。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[][] imageSmoother(int[][] M) {
+        int R = M.length, C = M[0].length;
+        int[][] ans = new int[R][C];
+
+        for (int r = 0; r < R; ++r)
+            for (int c = 0; c < C; ++c) {
+                int count = 0;
+                for (int nr = r-1; nr <= r+1; ++nr)
+                    for (int nc = c-1; nc <= c+1; ++nc) {
+                        if (0 <= nr && nr < R && 0 <= nc && nc < C) {
+                            ans[r][c] += M[nr][nc];
+                            count++;
+                        }
+                    }
+                ans[r][c] /= count;
+            }
+        return ans;
+    }
+}
+```
+
+## 30.[[665. 非递减数列](https://leetcode-cn.com/problems/non-decreasing-array/)]
 
 **描述**
 
@@ -360,7 +570,7 @@ class Solution {
 }
 ```
 
-## 27.[[674. 最长连续递增序列](https://leetcode-cn.com/problems/longest-continuous-increasing-subsequence/)]
+## 31.[[674. 最长连续递增序列](https://leetcode-cn.com/problems/longest-continuous-increasing-subsequence/)]
 
 **描述**
 
@@ -407,7 +617,70 @@ class Solution {
 }
 ```
 
-## 28.[[717. 1比特与2比特字符](https://leetcode-cn.com/problems/1-bit-and-2-bit-characters/)]
+## 32.[[697. 数组的度](https://leetcode-cn.com/problems/degree-of-an-array/)] !*
+
+**描述**
+
+给定一个非空且只包含非负数的整数数组 nums, 数组的度的定义是指数组里任一元素出现频数的最大值。
+
+你的任务是找到与 nums 拥有相同大小的度的最短连续子数组，返回其长度。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [1, 2, 2, 3, 1]
+输出: 2
+解释: 
+输入数组的度是2，因为元素1和2的出现频数最大，均为2.
+连续子数组里面拥有相同度的有如下所示:
+[1, 2, 2, 3, 1], [1, 2, 2, 3], [2, 2, 3, 1], [1, 2, 2], [2, 2, 3], [2, 2]
+最短连续子数组[2, 2]的长度为2，所以返回2.
+```
+
+**示例 2:**
+
+```
+输入: [1,2,2,3,1,4,2]
+输出: 6
+```
+
+**注意**
+
+- `nums.length` 在1到50,000区间范围内。
+- `nums[i]` 是一个在0到49,999范围内的整数。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int findShortestSubArray(int[] nums) {
+        Map<Integer, Integer> left = new HashMap(),
+            right = new HashMap(), count = new HashMap();
+
+        for (int i = 0; i < nums.length; i++) {
+            int x = nums[i];
+            if (left.get(x) == null) left.put(x, i);
+            right.put(x, i);
+            count.put(x, count.getOrDefault(x, 0) + 1);
+        }
+
+        int ans = nums.length;
+        int degree = Collections.max(count.values());
+        for (int x: count.keySet()) {
+            if (count.get(x) == degree) {
+                ans = Math.min(ans, right.get(x) - left.get(x) + 1);
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 33.[[717. 1比特与2比特字符](https://leetcode-cn.com/problems/1-bit-and-2-bit-characters/)]
 
 **描述**
 
@@ -460,7 +733,7 @@ class Solution {
 }
 ```
 
-## 29.[[724. 寻找数组的中心索引](https://leetcode-cn.com/problems/find-pivot-index/)]
+## 34.[[724. 寻找数组的中心索引](https://leetcode-cn.com/problems/find-pivot-index/)]
 
 **描述**
 
@@ -525,7 +798,7 @@ class Solution {
 }
 ```
 
-## 30.[[746. 使用最小花费爬楼梯](https://leetcode-cn.com/problems/min-cost-climbing-stairs/)]
+## 35.[[746. 使用最小花费爬楼梯](https://leetcode-cn.com/problems/min-cost-climbing-stairs/)]
 
 **描述**
 
@@ -576,7 +849,69 @@ class Solution {
 }
 ```
 
-## 31.[[766. 托普利茨矩阵](https://leetcode-cn.com/problems/toeplitz-matrix/)]
+## 36.[[747. 至少是其他数字两倍的最大数](https://leetcode-cn.com/problems/largest-number-at-least-twice-of-others/)]
+
+**描述**
+
+在一个给定的数组nums中，总是存在一个最大元素 。
+
+查找数组中的最大元素是否至少是数组中每个其他数字的两倍。
+
+如果是，则返回最大元素的索引，否则返回-1。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: nums = [3, 6, 1, 0]
+输出: 1
+解释: 6是最大的整数, 对于数组中的其他整数,
+6大于数组中其他元素的两倍。6的索引是1, 所以我们返回1.
+```
+
+**示例 2：**
+
+```
+输入: nums = [1, 2, 3, 4]
+输出: -1
+解释: 4没有超过3的两倍大, 所以我们返回 -1.
+```
+
+**注意：**
+
+1. `nums` 的长度范围在`[1, 50]`.
+2. 每个 `nums[i]` 的整数范围在 `[0, 100]`.
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 找到第一大和第二大的数字, 比较两个数
+    public int dominantIndex(int[] nums) {
+        int first = Integer.MIN_VALUE;
+        int firstIndex = -1;
+        int second = first;
+        for(int i=0; i<nums.length; i++){
+            if(nums[i] > first){
+                second = first;
+                first = nums[i];
+                firstIndex = i;
+            }else if(nums[i] > second){
+                second = nums[i];
+            }
+        }
+        if(first >= second * 2){
+            return firstIndex;
+        }
+        return -1;
+    }
+}
+```
+
+## 37.[[766. 托普利茨矩阵](https://leetcode-cn.com/problems/toeplitz-matrix/)]
 
 **描述**
 
@@ -654,7 +989,7 @@ class Solution {
 }
 ```
 
-## 32.[[830. 较大分组的位置](https://leetcode-cn.com/problems/positions-of-large-groups/)]
+## 38.[[830. 较大分组的位置](https://leetcode-cn.com/problems/positions-of-large-groups/)]
 
 **描述**
 
@@ -725,7 +1060,7 @@ class Solution {
 }
 ```
 
-## 33.[[832. 翻转图像](https://leetcode-cn.com/problems/flipping-an-image/)]
+## 39.[[832. 翻转图像](https://leetcode-cn.com/problems/flipping-an-image/)]
 
 **描述**
 
@@ -780,7 +1115,7 @@ class Solution {
 }
 ```
 
-## 34.[[867. 转置矩阵](https://leetcode-cn.com/problems/transpose-matrix/)]
+## 40.[[867. 转置矩阵](https://leetcode-cn.com/problems/transpose-matrix/)]
 
 **描述**
 
@@ -829,417 +1164,3 @@ class Solution {
     }
 }
 ```
-
-## 35.[[888. 公平的糖果交换](https://leetcode-cn.com/problems/fair-candy-swap/)]
-
-**描述**
-
-爱丽丝和鲍勃有不同大小的糖果棒：A[i] 是爱丽丝拥有的第 i 块糖的大小，B[j] 是鲍勃拥有的第 j 块糖的大小。
-
-因为他们是朋友，所以他们想交换一个糖果棒，这样交换后，他们都有相同的糖果总量。（一个人拥有的糖果总量是他们拥有的糖果棒大小的总和。）
-
-返回一个整数数组 ans，其中 ans[0] 是爱丽丝必须交换的糖果棒的大小，ans[1] 是 Bob 必须交换的糖果棒的大小。
-
-如果有多个答案，你可以返回其中任何一个。保证答案存在。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：A = [1,1], B = [2,2]
-输出：[1,2]
-```
-
-**示例 2：**
-
-```
-输入：A = [1,2], B = [2,3]
-输出：[1,2]
-```
-
-**示例 3：**
-
-```
-输入：A = [2], B = [1,3]
-输出：[2,3]
-```
-
-**示例 4：**
-
-```
-输入：A = [1,2,5], B = [2,4]
-输出：[5,4]
-```
-
-**提示：**
-
-- 1 <= A.length <= 10000
-- 1 <= B.length <= 10000
-- 1 <= A[i] <= 100000
-- 1 <= B[i] <= 100000
-- 保证爱丽丝与鲍勃的糖果总量不同。
-- 答案肯定存在。
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] fairCandySwap(int[] A, int[] B) {
-        int[] res = new int[2];
-        Set<Integer> set = new HashSet<>();
-        // 先计算出两个两个人拥有的糖果数量
-        // 并将其中一个人的糖果, 存放到set中, 用于后面计算
-        int sumA = 0;
-        for(int a : A){
-            sumA += a;
-            set.add(a);
-        }
-        int sumB = 0;
-        for(int b : B){
-            sumB += b;
-        }
-        // 计算出差值 A交出的数 - B交出的数 = (sumA - sumB) / 2
-        int difference = (sumA - sumB) / 2;
-        for(int b : B){
-            if(set.contains(b+difference)){
-                res[0] = b+difference;
-                res[1] = b;
-            }
-        }
-        return res;
-    }
-}
-```
-
-## 36.[[896. 单调数列](https://leetcode-cn.com/problems/monotonic-array/)]
-
-**描述**
-
-如果数组是单调递增或单调递减的，那么它是单调的。
-
-如果对于所有 i <= j，A[i] <= A[j]，那么数组 A 是单调递增的。 如果对于所有 i <= j，A[i]> = A[j]，那么数组 A 是单调递减的。
-
-当给定的数组 A 是单调数组时返回 true，否则返回 false。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：[1,2,2,3]
-输出：true
-```
-
-**示例 2：**
-
-```
-输入：[6,5,4,4]
-输出：true
-```
-
-**示例 3：**
-
-```
-输入：[1,3,2]
-输出：false
-```
-
-**示例 4：**
-
-```
-输入：[1,2,4,5]
-输出：true
-```
-
-**示例 4：**
-
-```
-输入：[1,1,1]
-输出：true
-```
-
-**提示：**
-
-- 1 <= A.length <= 10000
-- 1 <= B.length <= 10000
-- 1 <= A[i] <= 100000
-- 1 <= B[i] <= 100000
-- 保证爱丽丝与鲍勃的糖果总量不同。
-- 答案肯定存在。
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] fairCandySwap(int[] A, int[] B) {
-        int[] res = new int[2];
-        Set<Integer> set = new HashSet<>();
-        // 先计算出两个两个人拥有的糖果数量
-        // 并将其中一个人的糖果, 存放到set中, 用于后面计算
-        int sumA = 0;
-        for(int a : A){
-            sumA += a;
-            set.add(a);
-        }
-        int sumB = 0;
-        for(int b : B){
-            sumB += b;
-        }
-        // 计算出差值 A交出的数 - B交出的数 = (sumA - sumB) / 2
-        int difference = (sumA - sumB) / 2;
-        for(int b : B){
-            if(set.contains(b+difference)){
-                res[0] = b+difference;
-                res[1] = b;
-            }
-        }
-        return res;
-    }
-}
-```
-
-## 37.[[905. 按奇偶排序数组](https://leetcode-cn.com/problems/sort-array-by-parity/)]
-
-**描述**
-
-给定一个非负整数数组 `A`，返回一个数组，在该数组中， `A` 的所有偶数元素之后跟着所有奇数元素。
-
-你可以返回满足此条件的任何数组作为答案。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：[3,1,2,4]
-输出：[2,4,3,1]
-输出 [4,2,3,1]，[2,4,1,3] 和 [4,2,1,3] 也会被接受。
-```
-
-**提示：**
-
-- `1 <= A.length <= 5000`
-- `0 <= A[i] <= 5000`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] sortArrayByParity(int[] A) {
-        int[] res = new int[A.length];
-        int left = 0;
-        int right = A.length - 1;
-        for(int i : A){
-            if(i % 2 == 0){
-                res[left] = i;
-                left++;
-            }else{
-                res[right] = i;
-                right--;
-            }
-        }
-        return res;
-    }
-}
-```
-
-## 38.[[941. 有效的山脉数组](https://leetcode-cn.com/problems/valid-mountain-array/)]
-
-**描述**
-
-给定一个整数数组 A，如果它是有效的山脉数组就返回 true，否则返回 false。
-
-让我们回顾一下，如果 A 满足下述条件，那么它是一个山脉数组：
-
-- A.length >= 3
-- 在 0 < i < A.length - 1 条件下，存在 i 使得：
-  - A[0] < A[1] < ... A[i-1] < A[i]
-  - A[i] > A[i+1] > ... > A[A.length - 1]
-
-**示例**
-
-**示例 1：**
-
-```
-输入：[2,1]
-输出：false
-```
-
-**示例 2：**
-
-```
-输入：[3,5,5]
-输出：false
-```
-
-**示例 2：**
-
-```
-输入：[0,3,2,1]
-输出：true
-```
-
-
-
-**提示：**
-
-- `0 <= A.length <= 10000`
-- `0 <= A[i] <= 10000 `
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public boolean validMountainArray(int[] A) {
-        if(A.length < 3) return false;
-        // 记录升降, true 代表当前是升序
-        boolean upOrDown = true;
-        int start = A[0];
-        for(int i=1; i<A.length; i++){
-            // 当为升序, 后一个数小于前一个数时, 改为降序
-            // 当i = 1时, 说明第一个数大于第二个数, 不满足先升后降, 返回false
-            if(upOrDown){
-                if(A[i] < start){
-                    if(i == 1){
-                        return false;
-                    }
-                    upOrDown = false;
-                }  
-            // 当位降序, 出现后一个数大于前一个数时, 返回false
-            }else{
-                if(A[i] >= start){
-                    return false;
-                }
-            }
-            start = A[i];
-        }
-        // 当upOrDown为true时, 说明没有降序, 返回false;
-        return !upOrDown && true;
-    }
-}
-```
-
-## 39.[[977. 有序数组的平方](https://leetcode-cn.com/problems/squares-of-a-sorted-array/)]
-
-**描述**
-
-给定一个按非递减顺序排序的整数数组 `A`，返回每个数字的平方组成的新数组，要求也按非递减顺序排序。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：[-4,-1,0,3,10]
-输出：[0,1,9,16,100]
-```
-
-**示例 2：**
-
-```
-输入：[-7,-3,2,3,11]
-输出：[4,9,9,49,121]
-```
-
-**提示：**
-
-- `1 <= A.length <= 10000`
-- `-10000 <= A[i] <= 10000`
-- `A` 已按非递减顺序排序。
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] sortedSquares(int[] A) {
-        int[] res = new int[A.length]; 
-        // 双指针, 一个指向开头, 一个指向末尾
-        // 从后向前赋值, 因为两个指针指向两边, 两边的值其中一个必定是最大值,
-        // 如果从前向后赋值, 无法确定最小值, 最小值可能是中间的数
-        for(int i=0, j=A.length-1, pos=A.length-1; i<=j;){
-            if(A[i] * A[i] > A[j] * A[j]){
-                res[pos] = A[i] * A[i];
-                i++;
-            }else{
-                res[pos] = A[j] * A[j];
-                j--;
-            }
-            pos--;
-        }
-        return res;
-    }
-}
-```
-
-## 40.[[985. 查询后的偶数和](https://leetcode-cn.com/problems/sum-of-even-numbers-after-queries/)]
-
-**描述**
-
-给出一个整数数组 A 和一个查询数组 queries。
-
-对于第 i 次查询，有 val = queries[i][0], index = queries[i][1]，我们会把 val 加到 A[index] 上。然后，第 i 次查询的答案是 A 中偶数值的和。
-
-（此处给定的 index = queries[i][1] 是从 0 开始的索引，每次查询都会永久修改数组 A。）
-
-返回所有查询的答案。你的答案应当以数组 answer 给出，answer[i] 为第 i 次查询的答案。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：A = [1,2,3,4], queries = [[1,0],[-3,1],[-4,0],[2,3]]
-输出：[8,6,2,4]
-解释：
-开始时，数组为 [1,2,3,4]。
-将 1 加到 A[0] 上之后，数组为 [2,2,3,4]，偶数值之和为 2 + 2 + 4 = 8。
-将 -3 加到 A[1] 上之后，数组为 [2,-1,3,4]，偶数值之和为 2 + 4 = 6。
-将 -4 加到 A[0] 上之后，数组为 [-2,-1,3,4]，偶数值之和为 -2 + 4 = 2。
-将 2 加到 A[3] 上之后，数组为 [-2,-1,3,6]，偶数值之和为 -2 + 6 = 4。
-```
-
-**提示：**
-
-- `1 <= A.length <= 10000
-- -10000 <= A[i] <= 10000
-- 1 <= queries.length <= 10000
-- -10000 <= queries[i][0] <= 10000
-- 0 <= queries[i][1] < A.length
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] sortedSquares(int[] A) {
-        int[] res = new int[A.length]; 
-        // 双指针, 一个指向开头, 一个指向末尾
-        // 从后向前赋值, 因为两个指针指向两边, 两边的值其中一个必定是最大值,
-        // 如果从前向后赋值, 无法确定最小值, 最小值可能是中间的数
-        for(int i=0, j=A.length-1, pos=A.length-1; i<=j;){
-            if(A[i] * A[i] > A[j] * A[j]){
-                res[pos] = A[i] * A[i];
-                i++;
-            }else{
-                res[pos] = A[j] * A[j];
-                j--;
-            }
-            pos--;
-        }
-        return res;
-    }
-}
-```
-
