--- a/面试/算法/数组/简单/数组-简单(61-80).md
+++ b/面试/算法/数组/简单/数组-简单(61-80).md
@@ -8,7 +8,1031 @@
 
 # 数组-简单(61-80)
 
-## 61.[[1295. 统计位数为偶数的数字](https://leetcode-cn.com/problems/find-numbers-with-even-number-of-digits/)]
+## 61.[[1122. 数组的相对排序](https://leetcode-cn.com/problems/relative-sort-array/)]
+
+**描述**
+
+给你两个数组，arr1 和 arr2，
+
+- arr2 中的元素各不相同
+- arr2 中的每个元素都出现在 arr1 中
+
+对 arr1 中的元素进行排序，使 arr1 中项的相对顺序和 arr2 中的相对顺序相同。未在 arr2 中出现过的元素需要按照升序放在 arr1 的末尾。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr1 = [2,3,1,3,2,4,6,7,9,2,19], arr2 = [2,1,4,3,9,6]
+输出：[2,2,2,1,4,3,3,9,6,7,19]
+```
+
+**示例 2：**
+
+```
+输入：[1,2,3]
+输出：null
+解释：调用函数后，输入的数组将被修改为：[1,2,3]
+```
+
+**提示:**
+
+- arr1.length, arr2.length <= 1000
+- 0 <= arr1[i], arr2[i] <= 1000
+- arr2 中的元素 arr2[i] 各不相同
+- arr2 中的每个元素 arr2[i] 都出现在 arr1 中
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] relativeSortArray(int[] arr1, int[] arr2) {
+        // 使用桶排序
+        int[] ans = new int[arr1.length];
+        int[] bucket = new int[1001];
+        for(int num : arr1){
+            bucket[num]++;
+        }
+        int index = 0;
+        for(int num : arr2){
+            while(bucket[num]-- > 0){
+                ans[index++] = num;
+            }
+        }
+        for(int i=1; i<bucket.length; i++){
+            while(bucket[i]-- > 0){
+                ans[index++] = i;
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 62.[[1128. 等价多米诺骨牌对的数量](https://leetcode-cn.com/problems/number-of-equivalent-domino-pairs/)]
+
+**描述**
+
+给你一个由一些多米诺骨牌组成的列表 dominoes。
+
+如果其中某一张多米诺骨牌可以通过旋转 0 度或 180 度得到另一张多米诺骨牌，我们就认为这两张牌是等价的。
+
+形式上，dominoes[i] = [a, b] 和 dominoes[j] = [c, d] 等价的前提是 a==c 且 b==d，或是 a==d 且 b==c。
+
+在 0 <= i < j < dominoes.length 的前提下，找出满足 dominoes[i] 和 dominoes[j] 等价的骨牌对 (i, j) 的数量。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：dominoes = [[1,2],[2,1],[3,4],[5,6]]
+输出：1
+```
+
+**提示:**
+
+- `1 <= dominoes.length <= 40000`
+- `1 <= dominoes[i][j] <= 9`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 使用桶排序
+    public int numEquivDominoPairs(int[][] dominoes) {
+        int[] bucket = new int[100];
+        int count = 0;
+        for(int[] i :dominoes){
+            if(i[0] > i[1]){
+                // 是两个数较小的数*10 + 较大的数, 组成一个两位数
+                bucket[i[1]*10 + i[0]]++;
+            }else{
+                bucket[i[0]*10 + i[1]]++;
+            }
+        }
+        // 因为是两位数, 所以从11开始
+        for(int i=11; i<100; i++){
+            if(bucket[i] >= 2){
+                count += bucket[i]*(bucket[i]-1) / 2;
+            }
+        }
+        return count;
+    }
+}
+```
+
+## 63.[[1133.最大唯一数](https://leetcode-cn.com/problems/largest-unique-number)]
+
+## 64.[[1150.检查一个数是否在数组中占绝大多数](https://leetcode-cn.com/problems/check-if-a-number-is-majority-element-in-a-sorted-array)]
+
+## 65.[[1160. 拼写单词](https://leetcode-cn.com/problems/find-words-that-can-be-formed-by-characters/)]
+
+**描述**
+
+给你一份『词汇表』（字符串数组） words 和一张『字母表』（字符串） chars。
+
+假如你可以用 chars 中的『字母』（字符）拼写出 words 中的某个『单词』（字符串），那么我们就认为你掌握了这个单词。
+
+注意：每次拼写（指拼写词汇表中的一个单词）时，chars 中的每个字母都只能用一次。
+
+返回词汇表 words 中你掌握的所有单词的 长度之和。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：words = ["cat","bt","hat","tree"], chars = "atach"
+输出：6
+解释： 
+可以形成字符串 "cat" 和 "hat"，所以答案是 3 + 3 = 6。
+```
+
+**示例2:**
+
+```
+输入：words = ["hello","world","leetcode"], chars = "welldonehoneyr"
+输出：10
+解释：
+可以形成字符串 "hello" 和 "world"，所以答案是 5 + 5 = 10。
+```
+
+**提示:**
+
+- 1 <= words.length <= 1000
+- 1 <= words[i].length, chars.length <= 100
+- 所有字符串中都仅包含小写英文字母
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 使用桶排序
+    public int countCharacters(String[] words, String chars) {
+        int[] bucket = new int[26];
+        int[] tmp = new int[26];
+        for(int i=0; i<chars.length(); i++){
+            // 97 是 a对应的码
+            bucket[chars.charAt(i) - 97]++;
+        }
+        int ans = 0;
+        for(String word : words){
+            System.arraycopy(bucket,0,tmp,0,26);
+            boolean is = true;
+            for(int i=0; i<word.length(); i++){
+                if(tmp[word.charAt(i) - 97]-- == 0){
+                    is = false;
+                    break;
+                }
+            }
+            ans += is ? word.length() : 0;
+        }
+        return ans;
+    }
+}
+```
+
+## 66.[[1170. 比较字符串最小字母出现频次](https://leetcode-cn.com/problems/compare-strings-by-frequency-of-the-smallest-character/)]
+
+**描述**
+
+我们来定义一个函数 f(s)，其中传入参数 s 是一个非空字符串；该函数的功能是统计 s  中（按字典序比较）最小字母的出现频次。
+
+例如，若 s = "dcce"，那么 f(s) = 2，因为最小的字母是 "c"，它出现了 2 次。
+
+现在，给你两个字符串数组待查表 queries 和词汇表 words，请你返回一个整数数组 answer 作为答案，其中每个 answer[i] 是满足 f(queries[i]) < f(W) 的词的数目，W 是词汇表 words 中的词。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：queries = ["cbd"], words = ["zaaaz"]
+输出：[1]
+解释：查询 f("cbd") = 1，而 f("zaaaz") = 3 所以 f("cbd") < f("zaaaz")。
+```
+
+**示例2:**
+
+```
+输入：queries = ["bbb","cc"], words = ["a","aa","aaa","aaaa"]
+输出：[1,2]
+解释：第一个查询 f("bbb") < f("aaaa")，第二个查询 f("aaa") 和 f("aaaa") 都 > f("cc")。
+```
+
+**提示:**
+
+- 1 <= queries.length <= 2000
+- 1 <= words.length <= 2000
+- 1 <= queries[i].length, words[i].length <= 10
+- queries[i][j], words[i][j] 都是小写英文字母
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] numSmallerByFrequency(String[] queries, String[] words) {
+        int[] wCount = new int[words.length];
+        int[] ans = new int[queries.length];
+        for(int i=0; i<words.length; i++){
+            wCount[i] = f(words[i]);
+        }
+        for(int i=0; i<queries.length; i++){
+            int len = f(queries[i]);
+            int count = 0;
+            for(int wc : wCount){
+                if(len < wc){
+                    count++;
+                }
+            }
+            ans[i] = count;
+        }
+        return ans;
+    }
+	// 计算最小的字母, 出现的次数
+    public int f(String s){
+        char min = s.charAt(0);
+        int count = 1;
+        for(int i=1; i<s.length(); i++){
+            char tmp = s.charAt(i);
+            if(tmp == min){
+                count++;
+            }else if(tmp < min){
+                min = s.charAt(i);
+                count = 1;
+            }
+        }
+        return count;
+    }
+}
+```
+
+## 67.[[1176.健身计划评估](https://leetcode-cn.com/problems/diet-plan-performance)]
+
+## 68.[[1184. 公交站间的距离](https://leetcode-cn.com/problems/distance-between-bus-stops/)]
+
+**描述**
+
+环形公交路线上有 n 个站，按次序从 0 到 n - 1 进行编号。我们已知每一对相邻公交站之间的距离，distance[i] 表示编号为 i 的车站和编号为 (i + 1) % n 的车站之间的距离。
+
+环线上的公交车都可以按顺时针和逆时针的方向行驶。
+
+返回乘客从出发点 start 到目的地 destination 之间的最短距离。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：distance = [1,2,3,4], start = 0, destination = 1
+输出：1
+解释：公交站 0 和 1 之间的距离是 1 或 9，最小值是 1。
+```
+
+**示例2:**
+
+```
+输入：distance = [1,2,3,4], start = 0, destination = 2
+输出：3
+解释：公交站 0 和 2 之间的距离是 3 或 7，最小值是 3。
+```
+
+**示例3:**
+
+```
+输入：distance = [1,2,3,4], start = 0, destination = 3
+输出：4
+解释：公交站 0 和 3 之间的距离是 6 或 4，最小值是 4。
+```
+
+**提示:**
+
+- 1 <= n <= 10^4
+- distance.length == n
+- 0 <= start, destination < n
+- 0 <= distance[i] <= 10^4
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int distanceBetweenBusStops(int[] distance, int start, int destination) {
+        int one = 0, two = 0;
+        // 让起始点, 始终小于终点
+        if(start > destination){
+            int tmp = start;
+            start = destination;
+            destination = tmp;
+        }
+        // 在起始点-终点之外的路线, 相加记为two路线
+        for(int i=0; i<start; i++){
+            two += distance[i];
+        }
+        for(int i=start; i<destination; i++){
+            one += distance[i];
+        }
+        for(int i=destination; i<distance.length; i++){
+            two += distance[i];
+        }
+        return Math.min(one, two);
+    }
+}
+```
+
+## 69.[[1185. 一周中的第几天](https://leetcode-cn.com/problems/day-of-the-week/)] !*
+
+**描述**
+
+给你一个日期，请你设计一个算法来判断它是对应一周中的哪一天。
+
+输入为三个整数：day、month 和 year，分别表示日、月、年。
+
+您返回的结果必须是这几个值中的一个 {"Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"}。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：day = 31, month = 8, year = 2019
+输出："Saturday"
+```
+
+**示例2:**
+
+```
+输入：day = 18, month = 7, year = 1999
+输出："Sunday"
+```
+
+**示例3:**
+
+```
+输入：day = 15, month = 8, year = 1993
+输出："Sunday"
+```
+
+**提示:**
+
+- 给出的日期一定是在 `1971` 到 `2100` 年之间的有效日期。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String dayOfTheWeek(int day, int month, int year) {
+        int sum = 4;
+        if(year!=1971) {
+            for(int i = 1971;i<year;i++) {
+                sum+=Tianshu(i);
+            }
+        }
+        String[] arr = new String[7];
+        arr[0]="Sunday";
+        arr[1]="Monday";
+        arr[2]="Tuesday";
+        arr[3]="Wednesday";
+        arr[4]="Thursday";
+        arr[5]="Friday";
+        arr[6]="Saturday";
+        int[] brr = new int[12];
+        brr[0] = 31;
+        brr[2] = 31;
+        brr[3] = 30;
+        brr[4] = 31;
+        brr[5] = 30;
+        brr[6] = 31;
+        brr[7] = 31;
+        brr[8] = 30;
+        brr[9] = 31;
+        brr[10] = 30;
+        brr[11] = 31;
+        if(year%4==0&&year%100!=0||year%400==0) {
+            brr[1]=29;
+            if(month==1) {
+                return arr[(day+sum)%7];
+            }
+            for(int i = 0;i<month-1;i++) {
+                sum+=brr[i];
+            }
+            sum+=day;
+            return arr[sum%7];
+        }else {
+            brr[1]=28;
+            if(month==1) {
+                return arr[(day+sum)%7];
+            }
+            for(int i = 0;i<month-1;i++) {
+                sum+=brr[i];
+            }
+            sum+=day;
+            return arr[sum%7];
+        }
+    }
+    public int Tianshu(int a) {
+        if(a%4==0&&a%100!=0||a%400==0) {
+            return 366;
+        }
+        return 365;
+    }
+}
+```
+
+## 70.[[1200. 最小绝对差](https://leetcode-cn.com/problems/minimum-absolute-difference/)]
+
+**描述**
+
+给你个整数数组 `arr`，其中每个元素都 **不相同**。
+
+请你找到所有具有最小绝对差的元素对，并且按升序的顺序返回。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr = [4,2,1,3]
+输出：[[1,2],[2,3],[3,4]]
+```
+
+**示例2:**
+
+```
+输入：arr = [1,3,6,10,15]
+输出：[[1,3]]
+```
+
+**示例3:**
+
+```
+输入：arr = [3,8,-10,23,19,-4,-14,27]
+输出：[[-14,-10],[19,23],[23,27]]
+```
+
+**提示:**
+
+- `2 <= arr.length <= 10^5`
+- `-10^6 <= arr[i] <= 10^6`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<List<Integer>> minimumAbsDifference(int[] arr) {
+        List<List<Integer>> ans = new ArrayList<>();
+        // 先排序
+        Arrays.sort(arr);
+        int min = Integer.MAX_VALUE;
+        // 求出最小差值
+        for(int i=0; i<arr.length-1; i++){
+            min = Math.min(min, arr[i+1] - arr[i]);
+        }
+        // 相邻的两个数的差等于最小差值的存起来
+        for(int i=0; i<arr.length-1; i++){
+            if(arr[i+1] - arr[i] == min){
+                List<Integer> tmp = new ArrayList<>();
+                tmp.add(arr[i]);
+                tmp.add(arr[i+1]);
+                ans.add(tmp);
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 71.[[1217. 玩筹码](https://leetcode-cn.com/problems/minimum-cost-to-move-chips-to-the-same-position/)]
+
+**描述**
+
+数轴上放置了一些筹码，每个筹码的位置存在数组 chips 当中。
+
+你可以对 任何筹码 执行下面两种操作之一（不限操作次数，0 次也可以）：
+
+- 将第 i 个筹码向左或者右移动 2 个单位，代价为 0。
+- 将第 i 个筹码向左或者右移动 1 个单位，代价为 1。
+
+最开始的时候，同一位置上也可能放着两个或者更多的筹码。
+
+返回将所有筹码移动到同一位置（任意位置）上所需要的最小代价。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：chips = [1,2,3]
+输出：1
+解释：第二个筹码移动到位置三的代价是 1，第一个筹码移动到位置三的代价是 0，总代价为 1。
+```
+
+**示例2:**
+
+```
+输入：chips = [2,2,2,3,3]
+输出：2
+解释：第四和第五个筹码移动到位置二的代价都是 1，所以最小总代价为 2。
+```
+
+**提示:**
+
+- `1 <= chips.length <= 100`
+- `1 <= chips[i] <= 10^9`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 奇数到奇数, 偶数到偶数消耗是0
+    // 所以只要确定, 是奇数到偶数, 还是偶数到奇数, 就是比奇数和偶数哪个少
+    public int minCostToMoveChips(int[] position) {
+        int odd = 0, even = 0;
+        for(int num : position){
+            if(num % 2 == 0) even++;
+            else odd++;
+        }
+        return Math.min(odd, even);
+    }
+}
+```
+
+## 72.[[1232. 缀点成线](https://leetcode-cn.com/problems/check-if-it-is-a-straight-line/)]
+
+**描述**
+
+在一个 XY 坐标系中有一些点，我们用数组 coordinates 来分别记录它们的坐标，其中 coordinates[i] = [x, y] 表示横坐标为 x、纵坐标为 y 的点。
+
+请你来判断，这些点是否在该坐标系中属于同一条直线上，是则返回 true，否则请返回 false。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：coordinates = [[1,2],[2,3],[3,4],[4,5],[5,6],[6,7]]
+输出：true
+```
+
+**示例2:**
+
+```
+输入：coordinates = [[1,1],[2,2],[3,4],[4,5],[5,6],[7,7]]
+输出：false
+```
+
+**提示:**
+
+- 2 <= coordinates.length <= 1000
+- coordinates[i].length == 2
+- -10^4 <= coordinates[i][0], coordinates[i][1] <= 10^4
+- coordinates 中不含重复的点
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean checkStraightLine(int[][] coordinates) {
+        // 使用数学公式, 连续的三个点 p1,p2,p3 (x2-x1)*(y3-y2) == (x3-x2)*(y2-y1)
+        for(int i=1; i<coordinates.length-1; i++){
+            int res1 = (coordinates[i][0] - coordinates[i-1][0]) 
+                					* (coordinates[i+1][1] - coordinates[i][1]);
+            int res2 = (coordinates[i+1][0] - coordinates[i][0]) 
+                					* (coordinates[i][1] - coordinates[i-1][1]);
+            if(res1 != res2){
+                return false;
+            }
+        }
+        return true;
+    }
+}
+```
+
+## 73.[[1243.数组变换](https://leetcode-cn.com/problems/array-transformation)]
+
+## 74.[[1252. 奇数值单元格的数目](https://leetcode-cn.com/problems/cells-with-odd-values-in-a-matrix/)]
+
+**描述**
+
+给你一个 n 行 m 列的矩阵，最开始的时候，每个单元格中的值都是 0。
+
+另有一个索引数组 indices，indices[i] = [ri, ci] 中的 ri 和 ci 分别表示指定的行和列（从 0 开始编号）。
+
+你需要将每对 [ri, ci] 指定的行和列上的所有单元格的值加 1。
+
+请你在执行完所有 indices 指定的增量操作后，返回矩阵中 「奇数值单元格」 的数目。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：n = 2, m = 3, indices = [[0,1],[1,1]]
+输出：6
+解释：最开始的矩阵是 [[0,0,0],[0,0,0]]。
+第一次增量操作后得到 [[1,2,1],[0,1,0]]。
+最后的矩阵是 [[1,3,1],[1,3,1]]，里面有 6 个奇数。
+```
+
+**示例2:**
+
+```
+输入：n = 2, m = 2, indices = [[1,1],[0,0]]
+输出：0
+解释：最后的矩阵是 [[2,2],[2,2]]，里面没有奇数。
+```
+
+**提示:**
+
+- 1 <= n <= 50
+- 1 <= m <= 50
+- 1 <= indices.length <= 100
+- 0 <= indices[i][0] < n
+- 0 <= indices[i][1] < m
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int oddCells(int n, int m, int[][] indices) {
+        // row和col分别记录对应索引的行和列, 被加了多少次1
+        int[] row = new int[n];
+        int[] col = new int[m];
+        for(int[] indicy : indices){
+            row[indicy[0]]++;
+            col[indicy[1]]++;
+        }
+        int count = 0;
+        int rowCount = 0;
+        for(int num : row){
+            // 被加了奇数次的行, 格子数量加一行的数量
+            // 记录奇数行的数量
+            if(num % 2 == 1){
+                count += m;
+                rowCount++;
+            }
+        }
+        for(int num : col){
+            // 被加了奇数次的列, 格子数量加一列的数量
+            // 然后列和行会有一个格重叠, 并且重叠的格必定是偶数, 所以需要 减掉2*奇数行的数量, 
+            // 每有一个奇数行,就会有一个格重叠
+            // 例子 [2,1]
+            //      [1,0]
+            // 行+列 =4,  实际上却是2
+            if(num % 2 == 1){
+                count += n - rowCount * 2;
+            }
+        }
+        return count;
+    }
+}
+```
+
+## 75.[[1260. 二维网格迁移](https://leetcode-cn.com/problems/shift-2d-grid/)]
+
+**描述**
+
+给你一个 m 行 n 列的二维网格 grid 和一个整数 k。你需要将 grid 迁移 k 次。
+
+每次「迁移」操作将会引发下述活动：
+
+- 位于 grid[i][j] 的元素将会移动到 grid[i][j + 1]。
+- 位于 grid[i][n - 1] 的元素将会移动到 grid[i + 1][0]。
+- 位于 grid[m - 1][n - 1] 的元素将会移动到 grid[0][0]。
+
+请你返回 k 次迁移操作后最终得到的 二维网格。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：grid = [[1,2,3],[4,5,6],[7,8,9]], k = 1
+输出：[[9,1,2],[3,4,5],[6,7,8]]
+```
+
+**示例2:**
+
+```
+输入：grid = [[3,8,1,9],[19,7,2,5],[4,6,11,10],[12,0,21,13]], k = 4
+输出：[[12,0,21,13],[3,8,1,9],[19,7,2,5],[4,6,11,10]]
+```
+
+**示例2:**
+
+```
+输入：grid = [[1,2,3],[4,5,6],[7,8,9]], k = 9
+输出：[[1,2,3],[4,5,6],[7,8,9]]
+```
+
+**提示:**
+
+- 1 <= grid.length <= 50
+- 1 <= grid[i].length <= 50
+- -1000 <= grid[i][j] <= 1000
+- 0 <= k <= 100
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<List<Integer>> shiftGrid(int[][] grid, int k) {
+        List<List<Integer>> ans = new ArrayList<>();
+        List<Integer> list = new ArrayList<>();
+        int len = grid.length;
+        int clen = grid[0].length;
+        // 算出最小移动次数
+        k = k % (len * clen);
+        // 等于0时, 直接转换list
+        if(k == 0){
+            for(int i=0; i<len; i++){
+                list = new ArrayList<>();
+                for(int j=0; j<clen; j++){
+                    list.add(grid[i][j]);
+                }
+                ans.add(list);
+            }
+            return ans;
+        }
+        int[] tmp = getTmp(grid, k);
+        // 将取出的后面的数字, 加入到list的前面
+        for(int i=k-1; i>=0; i--){
+            if(list.size() == clen){
+                ans.add(list);
+                list = new ArrayList<>();
+            }
+            list.add(tmp[i]);
+        }
+		// 再将剩余的填充
+        for(int i=0; i<len; i++){
+            if(ans.size() == len){
+                return ans;
+            }
+            for(int j=0; j<clen; j++){
+                if(list.size() == clen){
+                    ans.add(list);
+                    list = new ArrayList<>();
+                }
+                list.add(grid[i][j]);
+            }
+        }
+        return ans;
+    }
+    // 从后向前取出, 要移动到前面的数字
+    public int[] getTmp(int[][] grid, int k){
+        int[] tmp = new int[k];
+        int start = 0;
+        for(int i=grid.length-1; i>=0; i--){
+            for(int j=grid[i].length-1; j>=0; j--){
+                tmp[start++] = grid[i][j];
+                if(start == k){
+                    return tmp;
+                }
+            }
+        }
+        return tmp;
+    }
+}
+```
+
+## 76.[[1266. 访问所有点的最小时间](https://leetcode-cn.com/problems/minimum-time-visiting-all-points/)]
+
+**描述**
+
+平面上有 n 个点，点的位置用整数坐标表示 points[i] = [xi, yi]。请你计算访问所有这些点需要的最小时间（以秒为单位）。
+
+你可以按照下面的规则在平面上移动：
+
+- 每一秒沿水平或者竖直方向移动一个单位长度，或者跨过对角线（可以看作在一秒内向水平和竖直方向各移动一个单位长度）。
+- 必须按照数组中出现的顺序来访问这些点。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：points = [[1,1],[3,4],[-1,0]]
+输出：7
+解释：一条最佳的访问路径是： [1,1] -> [2,2] -> [3,3] -> [3,4] -> [2,3] -> [1,2] -> [0,1] -> [-1,0]   
+从 [1,1] 到 [3,4] 需要 3 秒 
+从 [3,4] 到 [-1,0] 需要 4 秒
+一共需要 7 秒
+```
+
+**示例2:**
+
+```
+输入：points = [[3,2],[-2,2]]
+输出：5
+```
+
+**提示:**
+
+- points.length == n
+- 1 <= n <= 100
+- points[i].length == 2
+- -1000 <= points[i][0], points[i][1] <= 1000
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 取两个点 Math.max(x1-x0,y1-y0);
+    public int minTimeToVisitAllPoints(int[][] points) {
+        int seconds = 0;
+        for(int i=1; i<points.length; i++){
+            seconds += Math.max(Math.abs(points[i][0]-points[i-1][0]), Math.abs(points[i][1]-points[i-1][1]));
+        }
+        return seconds;
+    }
+}
+```
+
+## 77.[[1275. 找出井字棋的获胜者](https://leetcode-cn.com/problems/find-winner-on-a-tic-tac-toe-game/)]
+
+**描述**
+
+A 和 B 在一个 3 x 3 的网格上玩井字棋。
+
+井字棋游戏的规则如下：
+
+- 玩家轮流将棋子放在空方格 (" ") 上。
+- 第一个玩家 A 总是用 "X" 作为棋子，而第二个玩家 B 总是用 "O" 作为棋子。
+- "X" 和 "O" 只能放在空方格中，而不能放在已经被占用的方格上。
+- 只要有 3 个相同的（非空）棋子排成一条直线（行、列、对角线）时，游戏结束。
+- 如果所有方块都放满棋子（不为空），游戏也会结束。
+- 游戏结束后，棋子无法再进行任何移动。
+
+给你一个数组 moves，其中每个元素是大小为 2 的另一个数组（元素分别对应网格的行和列），它按照 A 和 B 的行动顺序（先 A 后 B）记录了两人各自的棋子位置。
+
+如果游戏存在获胜者（A 或 B），就返回该游戏的获胜者；如果游戏以平局结束，则返回 "Draw"；如果仍会有行动（游戏未结束），则返回 "Pending"。
+
+你可以假设 moves 都 有效（遵循井字棋规则），网格最初是空的，A 将先行动。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：moves = [[0,0],[2,0],[1,1],[2,1],[2,2]]
+输出："A"
+解释："A" 获胜，他总是先走。
+"X  "    "X  "    "X  "    "X  "    "X  "
+"   " -> "   " -> " X " -> " X " -> " X "
+"   "    "O  "    "O  "    "OO "    "OOX"
+```
+
+**示例2:**
+
+```
+输入：moves = [[0,0],[1,1],[0,1],[0,2],[1,0],[2,0]]
+输出："B"
+解释："B" 获胜。
+"X  "    "X  "    "XX "    "XXO"    "XXO"    "XXO"
+"   " -> " O " -> " O " -> " O " -> "XO " -> "XO " 
+"   "    "   "    "   "    "   "    "   "    "O  "
+```
+
+**示例3:**
+
+```
+输入：moves = [[0,0],[1,1],[2,0],[1,0],[1,2],[2,1],[0,1],[0,2],[2,2]]
+输出："Draw"
+输出：由于没有办法再行动，游戏以平局结束。
+"XXO"
+"OOX"
+"XOX"
+```
+
+**示例4:**
+
+```
+输入：moves = [[0,0],[1,1]]
+输出："Pending"
+解释：游戏还没有结束。
+"X  "
+" O "
+"   "
+```
+
+
+
+**提示:**
+
+- points.length == n
+- 1 <= n <= 100
+- points[i].length == 2
+- -1000 <= points[i][0], points[i][1] <= 1000
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String tictactoe(int[][] moves) {
+        int m = moves.length;
+        // 用数组记录0-2行、0-2列、正对角线、副对角线是否已满3个棋子
+        // count[0-2]对应0-2行、count[3-5]对应0-2列、count[6]对应正对角线、count[7]对应副对角线
+        int[] count = new int[8];
+        // 只需考虑最后一个落棋的人, 最后落棋的人才有可能胜利
+        // 倒序统计此人走棋情况
+        for(int i = m - 1; i >= 0; i -= 2) {
+            // 此棋对行的影响
+            count[moves[i][0]]++;
+            // 此棋对列的影响
+            count[moves[i][1] + 3]++;	
+            // 此棋对正对角线的影响
+            if(moves[i][0] == moves[i][1])
+                count[6]++;
+            // 此棋对副对角线的影响 (
+            // 此处为3x3的情况，其余大小的棋盘可以类推
+            if(moves[i][0] + moves[i][1] == 2)
+                count[7]++;
+            // 满3个棋子则胜利
+            if(count[moves[i][0]] == 3 || count[moves[i][1] + 3] == 3 || 
+                    count[6] == 3 || count[7] == 3) 
+                // A先B后 则总长度为偶时 最后为B 反之为A
+                return m % 2 == 0 ? "B" : "A";	
+            }
+        // 未胜时，棋盘未下满则继续
+        if(moves.length < 9)
+            return "Pending";
+        // 未胜时，棋盘下满则平局结束
+        return "Draw";
+    }
+}
+```
+
+## 78.[[1287. 有序数组中出现次数超过25%的元素](https://leetcode-cn.com/problems/element-appearing-more-than-25-in-sorted-array/)]
+
+**描述**
+
+给你一个非递减的 **有序** 整数数组，已知这个数组中恰好有一个整数，它的出现次数超过数组元素总数的 25%。
+
+请你找到并返回这个整数
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr = [1,2,2,6,6,6,6,7,10]
+输出：6
+```
+
+**提示:**
+
+- `1 <= arr.length <= 10^4`
+- `0 <= arr[i] <= 10^5`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int findSpecialInteger(int[] arr) {
+        // 只需比较当前数和  +1/4位置的数
+        int target = arr.length / 4;
+        for(int i=0; i<arr.length-target; i++){
+            if(arr[i] == arr[i+target]){
+                return arr[i];
+            }
+        }
+        return -1;
+    }
+}
+```
+
+
+
+## 79.[[1295. 统计位数为偶数的数字](https://leetcode-cn.com/problems/find-numbers-with-even-number-of-digits/)]
 
 **描述**
 
@@ -63,7 +1087,7 @@ class Solution {
 }
 ```
 
-## 62.[[1299. 将每个元素替换为右侧最大元素](https://leetcode-cn.com/problems/replace-elements-with-greatest-element-on-right-side/)]
+## 80.[[1299. 将每个元素替换为右侧最大元素](https://leetcode-cn.com/problems/replace-elements-with-greatest-element-on-right-side/)]
 
 **描述**
 
@@ -98,421 +1122,6 @@ class Solution {
         // 从后向前遍历, res存储的是每一位右边的最大值, 与对应位比较
         for(int i=len-2; i>=0; i--){
             res[i] = arr[i+1] > res[i+1] ? arr[i+1] : res[i+1];
-        }
-        return res;
-    }
-}
-```
-
-## 63.[[1304. 和为零的N个唯一整数](https://leetcode-cn.com/problems/find-n-unique-integers-sum-up-to-zero/)]
-
-**描述**
-
-给你一个整数 `n`，请你返回 **任意** 一个由 `n` 个 **各不相同** 的整数组成的数组，并且这 `n` 个数相加和为 `0` 。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：n = 5
-输出：[-7,-1,1,3,4]
-解释：这些数组也是正确的 [-5,-1,1,2,3]，[-3,-1,2,-2,4]。
-```
-
-**示例 2：**
-
-```
-输入：n = 3
-输出：[-1,0,1]
-```
-
-**示例 3：**
-
-```
-输入：n = 1
-输出：[0]
-```
-
-**提示：**
-
-- `1 <= arr.length <= 10^4`
-- `1 <= arr[i] <= 10^5`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] sumZero(int n) {
-        int[] res = new int[n];
-        // n-1, 防止奇数位越界
-        // 每次遍历填加正负数
-        for(int i=0; i<n-1; i+=2){
-            res[i] = n - i;
-            res[i+1] = 0 - (n-i);
-        }
-        return res;
-    }
-}
-```
-
-## 64.[[1313. 解压缩编码列表](https://leetcode-cn.com/problems/decompress-run-length-encoded-list/)]
-
-**描述**
-
-给你一个以行程长度编码压缩的整数列表 nums 。
-
-考虑每对相邻的两个元素 [freq, val] = [nums[2*i], nums[2*i+1]] （其中 i >= 0 ），每一对都表示解压后子列表中有 freq 个值为 val 的元素，你需要从左到右连接所有子列表以生成解压后的列表。
-
-请你返回解压后的列表。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：nums = [1,2,3,4]
-输出：[2,4,4,4]
-解释：第一对 [1,2] 代表着 2 的出现频次为 1，所以生成数组 [2]。
-第二对 [3,4] 代表着 4 的出现频次为 3，所以生成数组 [4,4,4]。
-最后将它们串联到一起 [2] + [4,4,4] = [2,4,4,4]。
-```
-
-**示例 2：**
-
-```
-输入：nums = [1,1,2,3]
-输出：[1,3,3]
-```
-
-**提示：**
-
-- `2 <= nums.length <= 100`
-- `nums.length % 2 == 0`
-- `1 <= nums[i] <= 100`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] decompressRLElist(int[] nums) {
-        int len = 0;
-        // 先计算出数组的长度, 创建数组
-        for(int i=0; i<nums.length; i+=2){
-            len += nums[i];
-        }
-        int[] ans = new int[len];
-        len = 0;
-        // 再填充进数组中
-        for(int i=0; i<nums.length; i+=2){
-            Arrays.fill(ans, len, len+nums[i], nums[i+1]);
-            len += nums[i];
-        }
-        return ans;
-    }
-}
-```
-
-## 65.[[1331. 数组序号转换](https://leetcode-cn.com/problems/rank-transform-of-an-array/)]
-
-**描述**
-
-给你一个整数数组 arr ，请你将数组中的每个元素替换为它们排序后的序号。
-
-序号代表了一个元素有多大。序号编号的规则如下：
-
-序号从 1 开始编号。
-一个元素越大，那么序号越大。如果两个元素相等，那么它们的序号相同。
-每个数字的序号都应该尽可能地小。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：arr = [40,10,20,30]
-输出：[4,1,2,3]
-解释：40 是最大的元素。 10 是最小的元素。 20 是第二小的数字。 30 是第三小的数字。
-```
-
-**示例 2：**
-
-```
-输入：arr = [100,100,100]
-输出：[1,1,1]
-解释：所有元素有相同的序号。
-```
-
-**示例 3：**
-
-```
-输入：arr = [37,12,28,9,100,56,80,5,12]
-输出：[5,3,4,2,8,6,7,1,3]
-```
-
-**提示：**
-
-- `0 <= arr.length <= 105`
-- `-109 <= arr[i] <= 109`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] arrayRankTransform(int[] arr) {
-        // 算出最大最小值, 用于创建桶排序数组
-        int min = Integer.MAX_VALUE, max = Integer.MIN_VALUE;
-        for(int i=0; i<arr.length; i++){
-            if(arr[i] < min) min = arr[i];
-            if(arr[i] > max) max = arr[i];
-        } 
-        int[] bucket = new int[max - min + 1];
-        // 初始化值为1
-        for(int i=0; i<arr.length; i++){
-            bucket[arr[i] - min] = 1;
-        }
-        // 对值进行排序, 不断累加
-        for(int i=1; i<bucket.length; i++){
-            bucket[i] = bucket[i-1] + bucket[i];
-        }
-        for(int i=0; i<arr.length; i++){
-            arr[i] = bucket[arr[i] - min];
-        }
-        return arr;
-    }
-}
-```
-
-## 66.[[1337. 方阵中战斗力最弱的 K 行](https://leetcode-cn.com/problems/the-k-weakest-rows-in-a-matrix/)]
-
-**描述**
-
-给你一个大小为 m * n 的方阵 mat，方阵由若干军人和平民组成，分别用 1 和 0 表示。
-
-请你返回方阵中战斗力最弱的 k 行的索引，按从最弱到最强排序。
-
-如果第 i 行的军人数量少于第 j 行，或者两行军人数量相同但 i 小于 j，那么我们认为第 i 行的战斗力比第 j 行弱。
-
-军人 总是 排在一行中的靠前位置，也就是说 1 总是出现在 0 之前。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：mat = 
-[[1,1,0,0,0],
- [1,1,1,1,0],
- [1,0,0,0,0],
- [1,1,0,0,0],
- [1,1,1,1,1]], 
-k = 3
-输出：[2,0,3]
-解释：
-每行中的军人数目：
-行 0 -> 2 
-行 1 -> 4 
-行 2 -> 1 
-行 3 -> 2 
-行 4 -> 5 
-从最弱到最强对这些行排序后得到 [2,0,3,1,4]
-```
-
-**示例 2：**
-
-```
-输入：mat = 
-[[1,0,0,0],
- [1,1,1,1],
- [1,0,0,0],
- [1,0,0,0]], 
-k = 2
-输出：[0,2]
-解释： 
-每行中的军人数目：
-行 0 -> 1 
-行 1 -> 4 
-行 2 -> 1 
-行 3 -> 1 
-从最弱到最强对这些行排序后得到 [0,2,3,1]
-```
-
-**提示：**
-
-- m == mat.length
-- n == mat[i].length
-- 2 <= n, m <= 100
-- 1 <= k <= m
-- matrix[i][j] 不是 0 就是 1
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int[] kWeakestRows(int[][] mat, int k) {
-        // 记录每一行的士兵数量
-        int[] tmp = new int[mat.length];
-        for(int i=0; i<mat.length; i++){
-            for(int j=mat[i].length-1; j>=0; j--){
-                if(mat[i][j] != 0){
-                    tmp[i] = j+1;
-                    break;
-                }
-            }
-        }
-        int[] ans = new int[k];
-        int target = 0;
-        int start = 0;
-        while(start != k){
-            // 遍历, 与目标值(target)比较, 
-            // 目标值从最小的0开始, 依次增加, 如果等于目标值, 就能按照目标值的增加顺序排序  
-            for(int i=0; i<tmp.length;i++){
-                if(tmp[i] == target){
-                    ans[start++] = i;
-                }
-                if(start == k){
-                    break;
-                }
-            }
-            target++;
-        }
-        return ans;
-    }
-}
-```
-
-## 67.[[1346. 检查整数及其两倍数是否存在](https://leetcode-cn.com/problems/check-if-n-and-its-double-exist/)]
-
-**描述**
-
-给你一个整数数组 arr，请你检查是否存在两个整数 N 和 M，满足 N 是 M 的两倍（即，N = 2 * M）。
-
-更正式地，检查是否存在两个下标 i 和 j 满足：
-
-- i != j
-- 0 <= i, j < arr.length
-- arr[i] == 2 * arr[j]
-
-**示例**
-
-**示例 1：**
-
-```
-输入：arr = [10,2,5,3]
-输出：true
-解释：N = 10 是 M = 5 的两倍，即 10 = 2 * 5 。
-```
-
-**示例 2：**
-
-```
-输入：arr = [7,1,14,11]
-输出：true
-解释：N = 14 是 M = 7 的两倍，即 14 = 2 * 7 。
-```
-
-**示例 3：**
-
-```
-输入：arr = [3,1,7,11]
-输出：false
-解释：在该情况下不存在 N 和 M 满足 N = 2 * M 。
-```
-
-**提示：**
-
-- `2 <= arr.length <= 500`
-- `-10^3 <= arr[i] <= 10^3`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public boolean checkIfExist(int[] arr) {
-        for(int i=0; i<arr.length; i++){
-            for(int j=0; j<arr.length; j++){
-                // 遍历比较2倍,  并且不是自己是自己的2倍(比如 0)
-                if(arr[i]*2 == arr[j] && i!=j){
-                    return true;
-                }
-            }
-        }
-        return false;
-    }
-}
-```
-
-## 68.[[1351. 统计有序矩阵中的负数](https://leetcode-cn.com/problems/count-negative-numbers-in-a-sorted-matrix/)]
-
-**描述**
-
-给你一个 `m * n` 的矩阵 `grid`，矩阵中的元素无论是按行还是按列，都以非递增顺序排列。 
-
-请你统计并返回 `grid` 中 **负数** 的数目。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：grid = [[4,3,2,-1],[3,2,1,-1],[1,1,-1,-2],[-1,-1,-2,-3]]
-输出：8
-解释：矩阵中共有 8 个负数。
-```
-
-**示例 2：**
-
-```
-输入：grid = [[3,2],[1,0]]
-输出：0
-```
-
-**示例 3：**
-
-```
-输入：grid = [[1,-1],[-1,-1]]
-输出：3
-```
-
-**示例 4：**
-
-```
-输入：grid = [[-1]]
-输出：1
-```
-
-**提示：**
-
-- `m == grid.length`
-- `n == grid[i].length`
-- `1 <= m, n <= 100`
-- `-100 <= grid[i][j] <= 100`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public int countNegatives(int[][] grid) {
-        int res = 0;
-        for (int i = 0; i < grid.length; i++) {
-            for (int j = 0; j < grid[0].length; j++) {
-                if (grid[i][j] < 0) {
-                    res += grid[0].length - j;
-                    break;
-                }
-            }
         }
         return res;
     }
